--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,29 +1,13 @@
 ---
-title: 中共部队调动不值一提,解放军与美军的合作甚于伊拉克
+title: 望子成龙和极不自信极度自卑的父母的都是为你好糟透了
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046383/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046457/)
 
-G-TV视频链接：[https://gtv.org/video/id=621262c21408ee3a03a256f1](https://gtv.org/video/id=621262c21408ee3a03a256f1)
+G-TV视频链接：[https://gtv.org/video/id=621263d81408ee3a03a257c0](https://gtv.org/video/id=621263d81408ee3a03a257c0)
 
-**郭文贵先生：**整个南海、东海包括特别是在东北这个地区，调兵是一直的，因为他过去搞了四五年了，他每年在那儿折腾。这就像兔子打拳一溜小动作，就你家旁边发现一个兔子，老远在那晃来晃去，你就不在乎它了。还有一个就是中国共产党这个兵，美国人、欧洲人真拿它不当个兵，他就在乎他这个核武器，根本不把你那狗屁部队当回事儿。
+**郭文贵先生：**人就是人，对孩子那种望子成龙，特别中国人父母在孩子面前永远在孩子面前表现自己多牛叉：“你看你爹啊！” 文斌： “你看你爹今天直播不错吧？你看你爹直播够帅吧？你看你爹今天干啥了吧？我这有俩农场了是吧？我这有两亩地了！”
 
-在外国人打仗的眼里边，你那些就是真的是行尸走肉，就是送死去了。你但凡跟国际上军人有过打交道，你跟他们聊中国的这些部队，他说：过去你陆军厉害，你现在陆军在现代科技战争面前，你什么肌肉啊，“哈哈！哈哈！哈！”你哈个屁呀你哈，人家18000里以外就给你炸了个球，你哈啥呀你哈，就是笑话！就是那些啥傻子，就是那些农民的孩子去当炮灰去。
-
-现在你去想想无人机到啥程度了，你想想无人机。无人机在高空，除了你这个导弹之外，你打不到的地方就把人给杀了。你有啥用呢，是不是啊。而且那个调兵，共产党，大家知道50万大军，所谓的50万临时凑起来的陆海军。啥叫陆海军？从陆军改到海军。这文斌你知道，上船只要没掉下去，就叫海军，掉下去就叫水军了，落水军了。就是像海冬兄弟说的，你都上火车、都上前线了，枪还没搂过呢，它就这德行知道嘛。
-
-那么美国、欧洲能参与的，包括日本人，根本不把中国的解放军当一回事。他在乎你是什么？战略式的所谓的核导弹和潜水艇部队。那这些部队在东海南海一直转悠，他没地方去，他只能在这儿转悠吓唬吓唬你知道嘛。就是你家门口，你别的不怕，你不怕真的碰到几个什么流氓、土匪的，你报警就完了。你怕那几个像路大脑袋、蛇妖闫，穿的一身要饭花子衣裳，在你门口老转悠，你说你烦不烦，是吧。
-
-知道路大脑袋不是好东西，蛇妖闫和九指妖，穿着一身要饭花子，还带着一个仿冒牌的墨镜，在那晃荡晃荡，你说她到底是黑社会、白社会、还是要饭的呢，你不知道怎么对付她，就恶心你。
-
-人家时间长也不在乎，但是习他就要干一把的就是什么呢？我就把这些家里边这些穷鬼们、穷人的孩子们、傻乎乎的傻货们送到前线去，帮我杀了得了。
-
-就像毛泽东一样，我睡不着觉啊，你说国民党80万大军叛给我了，都拿着美国装备，就在北京城。他能反蒋介石不能反我吗？咋弄死他个球的，我杀都杀不完，80万人怎么杀呀？去北朝鲜啊，冻死一批，让美国人杀死一批，他自己弄死一批，去吧。然后把我儿子变成了我的继承人。你看看。因为美国人，他知道美国人杀完这80万人，不管怎么着，毛泽东都赢了，北朝鲜都赢了。我就拿人命堆都把你堆赢了。
-
-最后你看到美国人家将军说，到现在还像做噩梦一样。就杀人杀到手软，一个一个往上冲，你连枪都没有，露着脚趾头就冲上来了。然后给美军跪下来要点吃的。你这哪儿是打仗去啊。
-
-现在习玩得一模一样。我把这百万部队给弄上前线去，省点经费。再一个，培养一批死人将军。像越南一样，我的习家军就出来了。另外一个，叫西方世界，你看我敢。我敢啥？我敢让别人家孩子死。他就这。
-
-他这个调动部队根本不在人家考虑范围之内，没有任何杀伤力，而且百分之百在人家掌握之中，百分之百。解放军跟美国的合作，绝对超过当年萨达姆的那些军队跟美国的合作。一打仗，全坐直升机走了，去科威特，全接走了。剩下萨达姆你去打去吧，你跟儿子玩去吧，然后直接把他儿子给捣死了，就这么简单，就这么简单。
+你发现就中国人爹妈都不自信，极度自卑，然后在孩子这儿炫，你炫耀啥？然后给孩子叫孩子知道“你看你爸对你多好，你妈对你好。” 然后挂嘴边 “都是为了你好”。我觉得世界上没有几个词儿比这更糟的了，“都是为了你好”，然后“你爸你妈都是正确的”，是吧？然后你爸你妈做的事情…….然后告诉你“你该怎么做”，我认为这简直是糟透了。我儿子女儿身上有的优点我身上都没有，我觉得在他们身上，我每天能学到很多很多东西。
 
 字幕来源：[2022年2月4日《文贵大直播》全文字版](https://gnews.org/zh-hans/1961700/)
 
