--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,26 +1,22 @@
 ---
-title: 有声｜英国将为 74 岁以上的老人注射第4剂疫苗
+title: 深夜突发普京承认乌东两处区域
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2046365/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2046433/)
 
-By:**秘翻新闻**
+**撰稿人：东**南
+![pastedGraphic.png](https://assets.gnews.org/wp-content/uploads/2022/02/DFD81797-2D00-464B-8CEC-A9D291F8FB99.jpeg)（图片来源网络）
+**昨日据俄国通信社的报道普京已经通告法国总统马克龙和德国总理朔尔茨，他即将签署关于乌克兰东部地区的法令，随后不久俄罗斯总统普京发布电视讲话承认乌克兰东部****2****个分离共和国独立地位。普京在电视讲话中表示：立即承认顿涅茨克人民共和国和卢甘斯克人民共和国的独立地位。普京要求俄罗斯议会****“****批准他的决定，并批准与两个共和国签订友好互助协定****”****，因为乌克兰东部局势恶化他对苏联解体后乌对俄罗斯的态度表示不满。普京称乌克兰加入北约是对俄罗斯安全的直接威胁。北约教官经常参加乌克兰的军事演习，在乌克兰建立的北约培训中心等同于北约军事基地，而且乌克兰还在计划制造自己的核武器，并称北约的基础设施也已抵达俄罗斯边境。**
 
-**2022-02-22**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/9-27.png)图片来源 Andy Rain/EPA-EFE
-据合众国际社2 月 21 日报道， 英国疫苗接种和免疫联合委员会，简称JCVI，于周一在一份声明中建议，为最脆弱的人在春季开始接种疫苗加强针，范围包括 74 岁以上的人、养老院居民和 12 岁及以上免疫功能低下的人。这将是为英国老年人提供的第四剂中共病毒疫苗，同时也是为免疫系统严重受损的人提供的第五剂疫苗。
+**随后不久据爱丽舍宫报道法国总统马克龙当晚召集国防和安全委员会商讨应对俄乌紧张局势的对策，也在俄罗斯通告发布后不久美国白宫新闻发言人珍****·****普萨基当地时间****2****月****21****日发表声明，针对俄罗斯总统普京签署承认顿涅茨克共和国和卢甘斯克共和国的命令作出回应表示：美国已经预料到俄罗斯会采取这种行动，并准备立即作出反应，总统拜登将很快发布一项行政命令，禁止美国人在顿涅茨克和卢甘斯克地区进行新的投资、贸易和融资，该行政令还将授权对决定在这两个地区活动的人实施制裁。**
 
-JCVI 在声明中补充称，疫苗免疫力会随着时间的推移而下降，该委员会的疫苗接种主席 魏·沈·利姆(Wei Shen Lim )教授在声明中称，为了对人群中最脆弱的个体保持高水平的保护，建议在今年晚些时候接种额外的疫苗剂量。
+**随着乌东地区局势的持续紧张，东部的反对武装之后很可能会扩大对抗的规模，同时美国和世界热爱和平的国家对乌东的这二个区域和俄罗斯会颁布全方面的经济制裁，到那时除了俄乌全面断交外，物资匮乏能源油价都会飙涨，民众的生活还能维持现在的状态吗？答案看来一定是不能的。如果是再给你普京****20****年，还给人民的必将是另一个****“****委内瑞拉****”****。**
 
-该公告发布的同一天，英国首相鲍里斯·约翰逊（Boris Johnson ）取消了对中共病毒的限制措施。
+文章参考：
 
-新闻来源[**https://www.upi.com/Top\_News/World-News/2022/02/21/fourth-covid-19-vaccine-shot-over-75-vulnerable/9031645469430/**](https://www.upi.com/Top_News/World-News/2022/02/21/fourth-covid-19-vaccine-shot-over-75-vulnerable/9031645469430/)
+[https://www.voachinese.com/a/kremlin-putin-to-recognize-independence-of-separatist-regions-in-eastern-ukraine-20220221/6452779.html](https://www.voachinese.com/a/kremlin-putin-to-recognize-independence-of-separatist-regions-in-eastern-ukraine-20220221/6452779.html)
 
-秘翻新闻 文洋 编译报道
-
-发布 : 恩典
-
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-321.jpg)
+*编辑：cindy*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
