--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,26 +1,32 @@
 ---
-title: 中共陷两难无奈暂缓尽职调查办法
+title: 有声｜驻中共国记者俱乐部对奥运报道环境表示失望
 ---
-`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2046304/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2046416/)
 
-作者：波士顿五月花 Frankie背靠背
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-22-at-2.45.11-PM-2.png)图片来源：互联网
-2月21日，中共国人民银行、银保监会、证监会联合发布公告，原定2022年3月1日起施行的《金融机构客户尽职调查和客户身份资料及交易记录保存管理办法》（以下简称《办法》）因技术原因暂缓施行。相关业务按原规定办理。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_3641-1.jpg)图片来源：互联网
-《办法》是由中共国三个机构分别是人民银行、银保监会、证监会于2022年1月26日发布，并自2022年3月1日起施行。以”反洗钱“和”恐怖融资“等名义，阻碍银行间客户资金流转，特别是个人现金取款或转账5万元人民币需要登记，还对其他金融交易资金往来也要求登记。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-22-at-2.50.33-PM-1.png)图片来自中共国人民银行网站截图
-中共人民银行称，暂停《办法》是因为技术原因，即金融机构需要修订完善内部管理制度、信息系统、业务流程，并进行人员培训。[【1】](http://www.pbc.gov.cn/goutongjiaoliu/113456/113469/4477355/index.html)可见中共内部金融政策推行遇到强大阻力，政策出台和执行缺乏统一协调，执政能力弱，同时政策也陷入两难，骑虎难下。中共金融崩溃在即，一管立死，放也是死。
+By:**秘翻新闻**
 
-不施行《办法》。中共国经济处在崩溃边缘，”先知先觉“的资金倾巢而出，外汇承受巨大压力，物价难以控制，”姜你军“、”蒜你恨“不久再现。
+**2022-02-22**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/10-30.png)图片来源 周日，中国奥运代表团抵达北京2022年冬奥会国家体育场举行的奥运闭幕式 Paul Hanna/UPI
+据合众国际社2 月 21 日报导，总部设在中共国的外国记者俱乐部21日表示，他们因冬奥会主办方没有向外国记者提供预期的报道环境而感到失望。
 
-实行《办法》。对中共国原本金融系统就已经各种”梗“，更是雪上加霜，就如同”三高”病人打了毒素最高含量的”西安版”中共病毒疫苗一般。更是给数字货币数字钱包，特别是喜币（HCN/HDO）喜支付（HPAY），即将粉墨登场的躺平币（盖特币）和GETTR PAY带来完美的机会和市场。
+外国记者俱乐部，以下简称FCCC，周一在一份声明中表示，对冬奥会期间中共国的独立报道条件仍旧低于国际标准感到失望。例如，一名中共奥运会官员阻止外国记者采访香港运动员。
 
-参考链接：[【1】公 告（附答记者问）](http://www.pbc.gov.cn/goutongjiaoliu/113456/113469/4477355/index.html)
+根据FCCC的声明，国际奥委会后来称该事件为独立案件。然而，在北京奥运会期间，政府干预的情况经常发生，这使外国媒体在中共国的经营环境充满挑战。
+
+促进新闻自由和与驻华记者交流的新闻俱乐部也在声明中表示，记者在奥运场馆外报道时经常受到一些官员的尾随和粗暴对待。
+
+FCCC 在其声明中指出：最明显的是，荷兰国家广播公司 NOS 的一名记者在电视直播中被中共便衣保安人员带离摄像机，尽管他一直站在警察指示他去的地方。NOS后来发推文称，这样的遭遇越来越成为中共国记者的日常。
+
+根据FCCC的声明，几名记者因撰写与奥运会有关的报道而在网上受到骚扰，其中包括中共国官媒账户和中共国外交官的骚扰。
+
+新闻来源 [**https://www.upi.com/Top\_News/World-News/2022/02/21/beijing-olympics-foreign-correspondents-club-dismayed-treatment-journalists/2671645463918/**](https://www.upi.com/Top_News/World-News/2022/02/21/beijing-olympics-foreign-correspondents-club-dismayed-treatment-journalists/2671645463918/)
+
+秘翻新闻 文洋 编译报道
+
+发布 : 恩典
 
 * * *
-
-*编辑&发布：Vicky*
-
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-321.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
