--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,25 +1,29 @@
 ---
-title: 视频&#124;中共使用机器人和虚假帐号影响冬奥会讨论
+title: 日本疫苗接种死亡平均每天4例，专家：不影响继续接种
 ---
-`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2046278/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046397/)
 
-制作：香草山视频部
+撰稿：东京樱花团/盖特第一批注册
 
-美国媒体2月18日报导，中共使用机器人、虚假帐号等工具选择性编辑宣传故事，以影响有关冬奥会的讨论。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/日本疫苗接种死亡平均每天4例，专家：不影响继续接种.png)来自网络
 
-据报道，该媒体与非营利调查新闻编辑室ProPublica发现，推特上存在一个中共虚假帐号网络。该网络有超过3000个帐号，通过分享带有相同评论的中共外宣推文，以协调行动，影响有关冬奥会的讨论。这些帐号普遍创建不久，没有关注者，推文仅以转发中共外宣推文为主。
+18日，日本厚生省（MHLW）召开了专家小组会议，讨论接种中共病毒（新冠病毒Covid-19）疫苗与不良反应之间的关系。
 
-目前推特已经通过电子邮件声明，确认数百个账户已被封禁，同时表示，将进一步调查这些帐户与国家支持的信息运营之间的联系。
+根据公开文件，从2021年2月17日开始接种到2022年1月23日，有1450人在接种疫苗后死亡（辉瑞公司1382人，摩德纳公司67人，阿斯利康公司1人）。 在2022年1月24日至2月4日期间，新增 24起死亡病例（辉瑞公司20起，摩德纳公司4起，阿斯利康公司0起）。
 
-中共冬奥会的虚假不仅限于虚假帐号操纵舆论。根据郭文贵先生在大直播中的爆料，中共冬奥会场的雪为人造假雪，裁判被中共买通非公正判罚，中共参赛运动员国籍造假。中共冬奥会的呈现只有虚假和丑陋。
+截至2022年2月4日，共有1,474人在接种疫苗后死亡的报告。
 
-发稿：林礼
+辉瑞公司第三剂疫苗接种后的死亡人数在2022年1月23日前为2人，2022年1月24日至2月4日期间为11人。 摩德纳第三剂疫苗接种后报告的死亡人数在2010年1月23日前为1人，2010年1月24日至2月4日期间为4人。死亡总数为18例。1月24日至2月3日期间死亡人数为15例。
 
-**更多资讯，更多关注**
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
+专家小组指出，“目前，虽然第三剂后出现死亡病例，不影响继续接种”。
 
+信息源：
+
+[高齢女性が目立つワクチン接種後死亡報告は3回目18件含めて1474件](https://hc.nikkan-gendai.com/articles/277294?page=3)
+
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
