--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,33 +1,24 @@
 ---
-title: 有声｜普京下令“维和”部队进入乌克兰分离地区
+title: 外国记者代表组织批评中共在奥运期间制造的糟糕待遇
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2046233/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2046358/)
 
-By:**秘翻新闻**
+#### 撰稿：彩虹
 
-**2022-02-22**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-31.png)图片来源 Aleksey Nikolsky/EPA-EFE
-据合众国际社2 月 21 日报道，俄罗斯总统弗拉基米尔-普京周一承认乌克兰东部两个分离主义地区为独立共和国，并对此发布法令，同时命令 “维和 “部队进入这些地区。
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-2-13.jpg)图片来源：InsiderSport
+《国会山报》2月21日根据《卫报》（The Guardian）报道，中国外国记者俱乐部（FCCC）是一个代表外国记者的组织，该组织发布了一份声明称，它对（中共）安全官员在奥运会期间对待经认可的外国媒体的方式感到“沮丧”，称中共政府与媒体互动的方式“违背了奥林匹克精神”。
 
-该法令于周一晚间发布，并立即生效。根据其中的条款，普京承认了自称的顿涅茨克和卢甘斯克人民共和国，并下令俄罗斯武装部队执行维和职能。在签署法令前，普京向俄罗斯人民发表讲话称，乌克兰顿巴斯地区的局势再次危急，宣称现代乌克兰完全是由俄罗斯创造的”，而且乌克兰不仅仅是俄罗斯的邻国。它是我们自己的历史、文化、精神空间不可分割的一部分。
+声明指：“（中共）政府的干预在奥运会期间经常发生。”作为（中共）政府支持的网上骚扰和宣传战役的一部分，一些外国记者成为了在线骚扰的目标和受害者。
 
-据《华盛顿邮报》报道，文件显示，这些协议已获得批准，并为期 10 年，这足以让俄罗斯在顿涅茨克和卢甘斯克建立军事基地，并在其与乌克兰的边界上联合巡逻。
+声明举例说：“在一次奥运会滑雪比赛之后，一名外国记者被一名北京奥运会官员阻止在奥运会混合区采访一名香港运动员，而这块区域应该是受国际奥林匹克规则管辖的。最明显的是，荷兰国家广播公司的一名记者在一次电视直播中被便衣保安人员拖出镜头，尽管他几分钟前还站在警察指示的位置上。”
 
-这些举措进一步加剧了危机中的紧张局势，美国和欧洲领导人一再警告称，这次事件是俄罗斯为入侵乌克兰前所作的掩护。
+中国外国记者俱乐部在声明中强调，“中国外国记者俱乐部敦促中共当局遵守他们自己对外国媒体在中国的认可规则：即允许记者在没有国家干预的威胁下预订和进行自己的采访，并在公共区域自由报道。不幸的是，在全球对中国的关注比以往任何时候都多的时候，这两条规则都没有得到执行。”
 
-拜登对此发布了一项行政命令，禁止美国人在乌克兰所谓的顿涅茨克和卢甘斯克地区进行新的投资、贸易和融资。
+**新闻来源**
 
-此前欧洲领导人曾敦促普京不要承认这些分离地区，称会违反已维持7年的明斯克和平协议。
+[Journalists group calls China’s handling of games ‘contrary to the Olympic spirit’](https://thehill.com/homenews/media/595186-journalists-group-calls-chinas-handling-of-games-contrary-to-the-olympic)
 
-新闻来源
-[**https://www.upi.com/Top\_News/World-News/2022/02/21/ukraine-invasion-joe-biden-vladimir-putin/2681645444138/**](https://www.upi.com/Top_News/World-News/2022/02/21/ukraine-invasion-joe-biden-vladimir-putin/2681645444138/)
-
-秘翻新闻 文洋 编译报道
-
-发布 : 恩典
-
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-321.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
