--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,23 +1,25 @@
 ---
-title: 中日财经爆┃中共国“存取款5万元KYC”新规暂缓执行
+title: 中日财经爆┃中共对雷神和洛克希德马丁报复性制裁
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2045971/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2045987/)
 
 撰稿：东京樱花团｜peterwong
-![](https://lh3.googleusercontent.com/yRBCqxr_yYl4N1vmsHqh6ayucehTLF0LIAy0cgYw1wo99Yoycr1j0344eCCmpvtt4q3EvhDUL9adlx1Nx-h1Xbl9kS1Njq3bcbv_5ltmQAx8f17GjCnYjkRW-ot-lflvg0DuI43e)[*图片来源*](https://cdn.hk01.com/di/media/images/dw/20211021/527879185985703936514976.jpeg/qQfsy3HkY-zc0CsxeE0yDGmoCQW_kdPEtc53xrXOd8Y?v=w1280r16_9)
-中共国央行周一（2月21日 ）晚间发布公告称，原定2022年3月1日起施行的《金融机构客户尽职调查和客户身份资料及交易记录保存管理办法》（下称《办法》）因技术原因暂缓施行。相关业务按原规定办理。
+![](https://lh3.googleusercontent.com/TtlryaIAEyZoJQXkPbLFN1TYUCTKq6otzbOM2M7ZTJ6JuzpZVn-rUqPPV4ICoxD55-WhB4fZoEm-RvlGCaMr_gsxBocv0M_0XFAGZD5WAdwusmShHFw4B_YzURwXB9E2zJD0Pe7D)[*图片来源*](https://tw.appledaily.com/resizer/LRFIlsh2Zv2bwoqUu4d4JpSqyP8=/1280x904/filters:quality%28100%29/cloudfront-ap-northeast-1.images.arcpublishing.com/appledaily/E5IOUWCR35B6FKDGBQMZUBG5FU.jpg)
+中国外交部新闻发言人汪文斌周一（2月21日）称，中共国决定对长期参与向台湾出售武器的美国军工企业——雷神和洛克希德马丁，实施报复性制裁。
 
-央行公告并附“答记者问”并解释称，一些中小金融机构提出，《办法》针对不同金融产品和业务模式提出了具体规范和要求，金融机构需要修订完善内部管理制度、信息系统、业务流程，并进行人员培训。为此，经研究，决定暂缓实施《办法》。
+此前在2019年和2020年中共国亦曾宣布对这两家公司进行制裁。不过，是次是中共国首次根据“反外国制裁法”做出相关决定。中国去年年中出台了“反外国制裁法”。该法共16条，明确了三类反制措施，包括注销签证、扣押冻结中国境内财产等。
 
-今年1月下旬，央行发布前述新规，《办法》原定于2022年3月1日起施行。《办法》第十条规定，商业银行、农村合作银行、农村信用合作社、村镇银行等金融机构为自然人客户办理人民币单笔5万元以上或者外币等值1万美元以上现金存取业务的，应当识别并核实客户身份，了解并登记资金的来源或者用途。
+美国国防部2月7日表示，美国已经批准向台湾出售价值或达1亿美元的设备和服务，以“维持、维护和改进”台湾爱国者导弹防御系统, 主要承包商将是雷神和洛克希德马丁。台湾国防部表示，该案可望在3月份正式生效。
 
-这条规定就是正规金融机构为人熟知的KYC（Know your customer）政策。央行有关司局负责人曾对媒体表示，实施《办法》的主要目的是预防和遏制洗钱等违法犯罪活动，保护人民群众资金安全和利益。该负责人还透露，从统计上看，目前我国超过5万元人民币的现金存取业务笔数仅占全部现金存取业务的2%左右，上述办法关于个人现金存取规定总体上看对客户办理现金业务影响较小。
+国防安全合作局说：“这项军售计划通过支持受援方继续努力使其武装部队现代化并保持可靠的防御能力，符合美国的国家、经济和安全利益。”
+
+台湾外交部在一份声明中称，面对中共国持续的军事扩张和挑衅行为，台湾将以坚实国防维护国家安全，并持续深化台美紧密安全伙伴关系。
 
 消息来源：
 
-1、[**中国央行称暂缓执行金融机构客户尽职调查新规 因部分机构需修订内部管理制度等**](https://cn.reuters.com/article/pboc-due-diligence-rules-0221-mon-idCNKBS2KR02J?il=0)
+1、[**中国决定对美国雷神和洛克希德马丁实施反制 因参与对台出售武器–外交部**](https://cn.reuters.com/article/china-mofa-us-raytheon-sanction-0221-idCNKBS2KQ0RG?il=0)
 
-2、[**影响太大!中国暂停“存取现金5万以上须登记”的新规**](https://www.allhot.net/finance/180256)
+2、[**美国批准对台湾一亿美元军售**](https://gnews.org/zh-hans/1974148/)
 
 *校对：东京樱花团 / 東洋武士*
 *发布：东京樱花团 / 平安卿卿*
