--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,13 +1,15 @@
 ---
-title: 望子成龙和极不自信极度自卑的父母的都是为你好糟透了
+title: 让孩子孝敬你时，父母先学会尊重你的孩子和爱孩子所爱
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046457/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046554/)
 
-G-TV视频链接：[https://gtv.org/video/id=621263d81408ee3a03a257c0](https://gtv.org/video/id=621263d81408ee3a03a257c0)
+G-TV视频链接：[https://gtv.org/video/id=6212640f1408ee3a03a257e7](https://gtv.org/video/id=6212640f1408ee3a03a257e7)
 
-**郭文贵先生：**人就是人，对孩子那种望子成龙，特别中国人父母在孩子面前永远在孩子面前表现自己多牛叉：“你看你爹啊！” 文斌： “你看你爹今天直播不错吧？你看你爹直播够帅吧？你看你爹今天干啥了吧？我这有俩农场了是吧？我这有两亩地了！”
+**郭文贵先生：**如果人生有“如果”的话，我给父母提下建议：如果你让你孩子孝敬你、孝敬你的时候，你要先学会去尊重你的孩子；还有一个就是爱你的孩子，爱你孩子所爱，不要强调你（对）孩子的爱。
 
-你发现就中国人爹妈都不自信，极度自卑，然后在孩子这儿炫，你炫耀啥？然后给孩子叫孩子知道“你看你爸对你多好，你妈对你好。” 然后挂嘴边 “都是为了你好”。我觉得世界上没有几个词儿比这更糟的了，“都是为了你好”，然后“你爸你妈都是正确的”，是吧？然后你爸你妈做的事情…….然后告诉你“你该怎么做”，我认为这简直是糟透了。我儿子女儿身上有的优点我身上都没有，我觉得在他们身上，我每天能学到很多很多东西。
+我孩子，像我女儿的男朋友，我们俩非常非常的好，我最爱聊天儿就跟他，是吧？我女儿爱他我就要爱他，是不是？我儿子的女朋友跟我聊天喝酒，是我儿子的女朋友啊，我儿子爱她我就跟她好啊，我就跟她喝酒啊，就这么。我儿子交了俩女朋友都是跟我关系很好，他俩分手了现在跟我还都联系，对不对？就这么简单。
+
+你儿子的爱、你女儿的爱就是你的爱呀，你不要带着观点进去，是你的爱你带着观点，又肥又胖又瘦的，你乱评价啥？是吧？这是胡扯的，是吧？所以这个东西一旦懂了，文斌当父母就开心了，否则当父母就一生痛苦。小时候替他打工，大了替他操心，最后是他在嫁人娶人还跟他操心，最后不就混死了吗？是吧？
 
 字幕来源：[2022年2月4日《文贵大直播》全文字版](https://gnews.org/zh-hans/1961700/)
 
