--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,48 +1,26 @@
 ---
-title: 中共统治下，每一位国人都将替其背负一笔巨额债务
+title: 中共国聚焦非洲
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/2046424/)
+`喜马拉雅意大利罗马达芬奇农场` [轉載自GNews](https://gnews.org/zh-hans/2046512/)
 
-撰稿：何处是我家
-![](https://assets.gnews.org/wp-content/uploads/2022/02/224.png)图片来自网络
-我天生不招人喜欢。就连在被CCP精编裁减到只有三口人的家庭里，无疑，我也是孤单的那一个。其它两位最怕吃饭的时候，我不用嘴吃饭，而用嘴说话。那么，一旦这件事情发生，保准这顿饭每个人都吃的寡淡至极。我的孩子感谢CCP的胆大包天的COVID灾难，自己卷缩在北美的一所校园里过着怪诞日子。他肯定开心快乐，再也不用担心吃饭时我的嘴不务正业。留下的妻子总是没有心机的忘记在吃饭时，重复的问我一些问题。接着她就痛苦万分的听完我的长篇大论。后来，我发现能听懂我话的人远在大洋的彼岸。对留守的这位每次都是白说了，对她来说就赚得个多听了。
+翻译/整理: 萧亦
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Immagine-3.jpg)图片来自timeforafrica.it
+十三年达到了 230 亿美元。几乎是美国、日本、德国和法国机构提供的总和的两倍多。这是中共国投资银行(中国进出口银行和国家开发银行)在 2007 年至 2020 年期间向撒哈拉以南非洲国家提供贷款：建设公路、铁路、医院、政府大楼。巨额资金显示了非洲大陆对北京的重要性。长期有计划的经济渗透。一个日益成为现实的“中共国非洲”，这让欧洲感到担忧。
 
-我的孩子把我无尽的废话归为“绿皮火车文化”。可能，在他童年某一次亲身体验后，火车上的氛围给他留下深刻的记忆，我内心觉得这个文化归类无比的贴切。
+随着人口的快速增长、闪电般的城市化和丰富的资源，许多观察家认为这将是非洲世纪。如果是这样，中共国将扮演更多主角的角色，他们清楚地知道，巩固自己在世界上的地位的道路也从这里经过。
 
-今天感谢，一位叫“冰沙奶茶“的战友。他的一篇文章《丰县天量地方债看中共政府信用破产》，最近因铁链女而丑陋不堪，恶名震寰宇的丰县，还有另一个惊人的糗事——政府债务。这段话给了我激情，瞬间，我进入用嘴——不务正业模式！
+在 20 年的时间里，中共国已发展成为非洲大陆最大的贸易伙伴、最大的基础设施贷款人和外国直接投资的主要来源。中非贸易数据也提醒我们这一点，刚刚创下历史新高：2021年为2540亿美元，同比增长35%。南非、尼日利亚、安哥拉、埃及和刚果民主共和国是北京的五个最大贸易伙伴。
 
-但看文章中丰县的债务率规模虽达到373%。但是，贵阳市政府(2021.10月）的负债率是929%，高出丰县政府负债率近3倍。最让人担忧的是另一则数据，说出中共国政府债务大概数据：在中（共）国宏观经济论坛“CMF”中，袁海霞就曾表示2021年中（共）国债务规模达336万亿，未来三年地方政府每年要偿债超2.5万亿。这是2021年初的数据。我们就采用袁海霞女士提出的数据。计算一下这336万亿的债务分摊到每一个中国人身上是多少？336万亿除以14亿等于240000/每人。
+钻石、铜、锂、钴、铝土矿、石油：这些是中共国从非洲想得到的重要资源。已经有48个非洲国家成为了习近平九年前发起的丝绸之路的一部分。在非洲的扩张最具有重要的战略意义是从这里可以进入红海、苏伊士运河和欧洲，以及波斯湾和印度洋的水域。
 
-谁有权利享受这24万的数字呢？生活在大陆的每一个人，同时也包括所有拥有中共国国籍的每个人，无论是婴儿还是年老之人。只要是有生命特征的不会落下一个人！假如，你不幸死的稍微挣扎一些，这24万也保准儿登记到你的名下。
+关于中共国与非洲在安全事务上的合作。中共国政府否认了美国情报部门关于北京正在赤道几内亚建设军事基地的消息（这将是继2017年在吉布提开设的第二个军事基地）。同时中共国已宣布参与反恐活动和联合演习。2015 年已经向非洲联盟承诺 1 亿美元，用于资助非洲待命部队，即非洲大陆的维和部队。
 
-首先，我温馨提示一下，王毅在几年前说过让我终日失眠的一句话：（大概意思）不管你持有哪国护照的华人，只要是华人，首先你是中国人。大概率——只要是华人，24万元人民币的债务你可能也有一份。甚至，也会有几个在错误的时间出现在错误地点的韩国人，日本人，谁叫你长得黄皮肤，黑头发，眼睛不够大，鼻子不够高！当事实发生了，你再喊冤枉也是枉然，这14亿人不是没喊过！
+不仅是大型基础设施均由中共国公司建造，还有对矿山的直接或间接控制（尤其是刚果的钴和几内亚的铝土矿）。中共国的渗透也可以从一些分析人士所说的“建筑外交”中看出。中共国近年来无偿或无偿贷款建设。从2012年在亚的斯亚贝巴建成的非洲联盟总部，到上周竣工的埃塞俄比亚新商业银行总部，再到下个月竣工的津巴布韦新议会，另外还包括24 个总统或总理官邸、26 个议会。
 
-有很多的人不同意我的观点，政府的债务和我有什么关系。我自己还有房贷，还有车贷，还有在亲戚朋友的借款要归还。我的孩子还要上学，还要结婚，还要找工作送礼，政府也不会找我来承担政府债务这事。请记住：你的事是个人的事情，政府的事可是大家的事情，你是不是“大家”里的一员？！
+原文链接: [https://www.repubblica.it/economia/affari-e-finanza/2022/02/21/news/soldi\_vaccini\_strade\_pechino\_punta\_sulla\_chinafrica-338157635/?ref=drla-f-2](https://www.repubblica.it/economia/affari-e-finanza/2022/02/21/news/soldi_vaccini_strade_pechino_punta_sulla_chinafrica-338157635/?ref=drla-f-2)
 
-另一最有说服力关于债务和普通人关系的证据来自伤痛，这个记忆是最残酷和血腥的。大跃进的起因还有一种说法，是中共和苏共在短暂的蜜月期后，由于对世界共匪老大位置起了争夺。接着苏共在1956年开始陆续撤出支援中共国数量庞大的专家，于是，从来就没有清醒过的中共头领，瘦驴拉硬屎式的决定要快速还清对苏联的欠款。所以把大量的粮食出口换外汇，来偿还欠苏共款项。结果造成苦难的中国人没有了口粮，饿肚子死了四，五千万人成了历史的必然。这个版本上岁数的人们都会讲，每当说起大跃进的不堪时，苏共是祸首之一。你说，政府债务是不是和你有瓜连。
+责任编辑/发布:意大利达芬奇农场   萧亦
 
-我知道这336万亿只是政府债务的一部分，还有很多隐形的企业欠款，政府欠款没有计算进来。中共国最人性化之一——从来没有精确的数字。这对我们的生命的长度有意义。
-
-其次，在情理和法律方面，来解释国家债务和我们个人有没有关系。记得是最近这几年看的文章，德国刚刚还清“二战时期以战败国”对各国的赔偿款。赔偿款也是一种债务，看看这么优秀，这么严谨的日耳曼人都乖乖的交钱认账。另外，国家发行国债也是依靠未来国家税收来兑现利息和归还到期的国债。国家税收和你有没有关系？每个国家的国债都是以老百姓的收入来偿还的，你凭什么说和你没有关系。日本国家的国债为什么大多数是日本人自己购得？很简单——这钱早晚是要自己偿还，还不如自己先花钱买下，这样，还能得到一点利息。大和民族就是理性。
-
-回头再和同胞们说我们自己的事：我们生活在无产阶级专政的国家，是世界上独有的社会主义初级阶段的国家，最最重要的是我们是共产党绝对领导下的国家。共产党天天喊的集中力量办大事，政府债务是不是大事？你是不是同意政府的集中力量办大事，你是不是曾经极力赞成，赞扬，赞赏过中共国的这个优点？那好，24万按自家的人头拿走吧！晚了数字就可能变成48万/人。至于，你自己的房贷和其他的欠款，就不要到处宣扬。免得家丑外露，儿子找不到老婆，女儿觅不到好小伙儿。
-
-既然这么多债务存在，总得有人发现问题吧！我讲一个很多人知道却忽略的事情：中共国为什么突然出现了如此多的钱，还有如此高速的经济发展呢？我猜，一切都得从人民币发行以外汇储备为锚，得从朱镕基和王岐山们说起。他们把列宁的一句“从一头牛身上剥下两张牛皮”贯彻的淋漓尽致。
-
-简单讲，中（共）国央行凭空印出人民币去购买出口企业得到的外汇，再以卖出外币相应的又印刷一次人民币。结果就是1美元或者1欧元就获得两份的人民币。这就是中（共）国得以奇迹，高速发展二十年的真正原因。这也就更好的解释，出口创汇越多，中（共）国的货币就越充足，房地产就火爆，基础设施，汽车消费等也久久高潮不止。当然，有一部分人的收入也会增加，可，这只是假象。从天而降的人民币数量暴涨人们并没有富裕，却意外得到了暴涨的债务，这是中共国的特色之一吧！什么时候是终结点呢？我觉得不会等到明年（这件事我找到证据后再谈）。
-
-中共国到底有多少的债务呢？可能这是个世界之谜，就算你得到真实的数据，也会恐惧天量的数字，没有人敢说出。这不单是中国人未来的灾难，也是华尔街，IMF，美联储，欧盟央行，英国央行，世界各个国家银行的灾难！接下来的历史中再也不敢有人提“共产党**”**这三个字。
-
-总之，中国共产党存在一天，所有华人的欠款数额就上涨一天。能不能变成240万/人，完全是有可能的！
-
-新闻参考链接 ：
-
-[Gnews](https://gnews.org/zh-hans/2028989/)
-
-[搜狐新闻](https://www.sohu.com/a/443259444_100160903)（中共国墙内媒体）
-
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
