--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,39 +1,32 @@
 ---
-title: 早熟进玉米地&amp;私奔的七哥坚信无权干涉儿女的私人生活
+title: 南加州民众在好莱坞星光大道打出标语声援“铁链女”
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046421/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2046507/)
 
-G-TV视频链接：[https://gtv.org/video/id=621263661408ee3a03a2576b](https://gtv.org/video/id=621263661408ee3a03a2576b)
+**撰稿：日本东京方舟农场 子辰**
 
-**郭文贵先生：**包括我们对孩子，很简单，我和你嫂子两个我们俩就私奔结婚的，对孩子私人生活我们没有权力管，也不能去管，孩子爱谁不爱谁那是他的事儿，我觉得父母管这纯粹多余的事情。而且我从小这么早的成熟，我都进玉米地了，我更没有资格管孩子去，是不是？我也不能给孩子讨论这个事情。孩子是自由的，而且我对生理上、生理学、社会关系学、婚姻学，七哥认真学过的，这是为什么我们私奔结婚啊？这是为什么七哥从来我不服这套东西呀？就是因为我尊重自然规律。
+近期，南加州民众在熙熙攘攘热闹非凡的好莱坞星光大道上，举行了声援江苏“铁链女”的集会，集会人员打出标语声讨中共国对于妇女的贩卖，扣押等罪行，并呼吁国际社会关注中共国妇女的悲剧。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-331.jpg)（图片来自大纪元）
+集会现场，大家打着“释放铁链女”、“寻求真相打倒黑恶势力”等标语，进行了声援活动。
 
-字幕来源：[2022年2月4日《文贵大直播》全文字版](https://gnews.org/zh-hans/1961700/)
+据悉，此次声援活动是南加民众自发组织的，他们希望通过这次活动能够引起更多人的关注并得到国际社会的支持，让更多的人了解中共治下国内老百姓尤其是妇女的悲惨遭遇。
 
-编辑整理：Jacques；
+活动中，民众纷纷表示，太悲惨了，简直不敢想象是发生在当代的事件。
 
-字幕文件制作：小满；
+而且政府居然会掩盖这个事，所以它们很可能是同伙，这个更加激起了我们强大的愤怒。政府和犯罪同在一起，这个我们绝对不可能接受。活动现场还有人举着“真相不出、我们不散”的标语。
 
-视频制作及上传：Cindy；
+铁链女”爆出之际恰逢北京冬奥会筹备阶段，视频曝出后，一下子成为了民间关注的焦点，热度甚至超过冬奥会。徐州官方为平息此事，不断修改说辞，前后共抛出四次案情通告，但个个通告都被民间戳穿漏洞百出并掩盖真相。最终江苏17日宣布决定成立调查组调查事件真相，然而“铁链女”至今却下落不明。18日，湖南卫视记者前往「铁链女」所在的村子遇阻，发现该村已经被全面封锁。
 
-G-News发布：小满；
+此外，有加州律师表示，中共所谓的妇女儿童保护法，不仅仅是形同虚设，更像是整个政府经营的一个产业链，认为就是政府的各级官员，都在走私妇女儿童的产业链里在分一杯羹。
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+铁链女事件发展至今，不仅没有平息且不断发酵，海外民众纷纷发起连署要求彻查此事。洛杉矶的民运人士也发起了声援铁链女的活动。
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+参考链接：
+[https://www.epochtimes.com/b5/22/2/20/n13592125.htm](https://www.epochtimes.com/b5/22/2/20/n13592125.htm)
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+素材采编：子辰
+编辑：老孙
+发布：爱放飞
 
  
 
