--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,32 +1,25 @@
 ---
-title: 有声｜驻中共国记者俱乐部对奥运报道环境表示失望
+title: 英解除病毒禁令恐现耐疫苗变异毒株
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2046416/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046483/)
 
-By:**秘翻新闻**
+撰稿：东京樱花团/盖特第一批注册
 
-**2022-02-22**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/10-30.png)图片来源 周日，中国奥运代表团抵达北京2022年冬奥会国家体育场举行的奥运闭幕式 Paul Hanna/UPI
-据合众国际社2 月 21 日报导，总部设在中共国的外国记者俱乐部21日表示，他们因冬奥会主办方没有向外国记者提供预期的报道环境而感到失望。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/英解除病毒禁令恐现耐疫苗变异毒株.png)[图片来源](https://www.newsweekjapan.jp/kimura/2021/02/454800.php)
 
-外国记者俱乐部，以下简称FCCC，周一在一份声明中表示，对冬奥会期间中共国的独立报道条件仍旧低于国际标准感到失望。例如，一名中共奥运会官员阻止外国记者采访香港运动员。
+伦敦，1月21日路透社，英国英格兰地区的首席医疗官克里斯·惠蒂（Chris Whitty）在新闻发布会上针对政府宣布取消对该地区中共病毒（新冠病毒Covid-19）的所有法律控制措施，警告说如果出现新的变种病毒，疫苗的作用将被削弱。
 
-根据FCCC的声明，国际奥委会后来称该事件为独立案件。然而，在北京奥运会期间，政府干预的情况经常发生，这使外国媒体在中共国的经营环境充满挑战。
+21日英国政府宣布取消染疫的人群进行自愿隔离的要求。此举遭到了科学家和反对派的怀疑。
 
-促进新闻自由和与驻华记者交流的新闻俱乐部也在声明中表示，记者在奥运场馆外报道时经常受到一些官员的尾随和粗暴对待。
+惠蒂先生认为会出现新的变种病毒，有些会很快消失，但有些会造成严重问题。
 
-FCCC 在其声明中指出：最明显的是，荷兰国家广播公司 NOS 的一名记者在电视直播中被中共便衣保安人员带离摄像机，尽管他一直站在警察指示他去的地方。NOS后来发推文称，这样的遭遇越来越成为中共国记者的日常。
+信息源：
 
-根据FCCC的声明，几名记者因撰写与奥运会有关的报道而在网上受到骚扰，其中包括中共国官媒账户和中共国外交官的骚扰。
+[ワクチンに強い変異株が今後出現へ、英コロナ規制全廃で医務官苦言](https://jp.reuters.com/article/health-coronavirus-britain-variant-idJPKBN2KR05N)
 
-新闻来源 [**https://www.upi.com/Top\_News/World-News/2022/02/21/beijing-olympics-foreign-correspondents-club-dismayed-treatment-journalists/2671645463918/**](https://www.upi.com/Top_News/World-News/2022/02/21/beijing-olympics-foreign-correspondents-club-dismayed-treatment-journalists/2671645463918/)
-
-秘翻新闻 文洋 编译报道
-
-发布 : 恩典
-
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-321.jpg)
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
