--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,47 +1,43 @@
 ---
-title: 管孩子功歸七嫂,但七哥有不討論大人事和不撒謊兩原則
+title: 贩卖人口罪中西方刑事处罚差异很大
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046411/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2046474/)
 
-G-TV視頻鏈接：[https://gtv.org/video/id=621263301408ee3a03a25741](https://gtv.org/video/id=621263301408ee3a03a25741)
+#### **【雅典娜观察】和您一起洞察世界**
 
-**郭文貴先生：**這說起兒女，真的是我這一點真的感恩你七嫂。我覺得我是一個很寵孩子的人，如果按照我寵孩子，這倆孩子肯定不是今天這樣。你七嫂那是屬於很認真的、很嚴肅的。她家教就很嚴，她爸她媽都屬那種非常強悍型的，而且是非常非常嚴格家規的人。所以她從小的規矩，她就是這麼長大的，你七嫂子很強勢，你看我這樣的人都被她整得服服貼貼的，你想想她有多強勢吧，你想想她有多強勢，是吧？她對倆孩子就很強勢，就管得很嚴，這主要歸功你七嫂。
+整理/编辑：文泓
 
-但是我有兩樣原則這絕對是從小到大的，就是你看比如說我們家家規：孩子不要討論大人的事兒。我就覺得這個世界上沒有任何人你可以討論你父母，你個小屁孩兒討論父母的事兒，你不要介入到父母；而且中國人所有孩子都要（介入）父母的私人感情，父母的什麼恩恩怨怨全介入。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/12-28.png)图片来源：openDemocracy & 雅典娜设计组
 
-我最小的發小，最好的發小跟我爹我娘是非常不和的，非常不和的，但是它半點兒不影響我和他好。你說我那個照片跟前面的那個小伙子他爸爸就是我們當地的隊長，現在都在世呢，他就是跟我父親非常不和，但是它不影響我半點兒跟他好。你孩子不要介入到父母的糾紛當中去，也（別介入）父母的感情，這是我們的原則。
 
-另外一個就是我們家的孩子絕對不能撒謊。只要撒謊那是絕對不可以，所以他從來不撒謊。另外一個就是大家能看到我們作為山東人，我們這個家教裡邊孝敬。那孩子孝敬就別提了，就我兒子、我女兒的孝敬你們不可相信的，就是這種家庭文化，而且特別。就我們家庭的孩子從小跟我事業、生意完全沒有關係，而且是純粹的，純粹的。
+自中共篡政以来贩卖人口犯罪从未停止过，现在社交媒体上广为引述的一个说法是，在中共国买一个大活人受到的刑事处罚，比买一只珍稀野生动物还要轻。那么同样的罪名，在中西方法律规定有何不同？
 
-你去想想，他們從小金融上、生意上都做得很成功，財務上的獨立，對家庭上按著山東這種孔子家教的原則，對父母的孝敬，然後在社會上不撒謊、絕對不欺負軟的，那就我和你七嫂子不允許他半點兒欺負人，絕對善良。所以說我覺得這一點兒上真的是，我覺得這是個中國文化和現代文化現代化以後的成功的家庭，我認為是這樣子的。
+中共国刑法有关“拐卖妇女、儿童罪”的规定是：拐卖妇女、儿童的，处五年以上十年以下有期徒刑，并处罚金。有特别严重情节的可以判处十年以上有期徒刑或者无期徒刑，甚至死刑。
 
-字幕來源：[2022年2月4日《文貴大直播》全文字版](https://gnews.org/zh-hans/1961700/)
+对于买家一方，中共国刑法中原本称对于“没有虐待行为”的买家“可以不追究刑事责任”，2015年8月29日中国人大通过的刑法修正案(九)将该条款修改为“收买被拐卖的妇女、儿童，对被买儿童没有虐待行为，不阻碍对其进行解救的，可以从轻处罚；按照被买妇女的意愿，不阻碍其返回原居住地的，可以从轻或者减轻处罚。”
 
-編輯整理：Jacques；
+刑法第二百四十一条单列第一款规定，“收买被拐卖的妇女、儿童的，处三年以下有期徒刑、拘役或者管制”。就是说，**收买被拐者最高只会判刑****3****年。**
 
-字幕文件製作：小滿；
+在西方发达国家，德国的贩卖人口案件多涉及偷渡、黑工或强迫卖淫，贩卖人口刑罚规定如下：
 
-視頻製作及上傳：Cindy；
+主要涉及有组织的偷运人员（包括未成年人）非法入境，强迫从事卖淫或其它非法劳动，多由犯罪团伙跨境协同进行。**因此法律也针对对这一链条的各个环节，只要参与相关活动，不论是买是卖，都要承担同等刑责。**
 
-G-News發佈：小滿；
+德国刑法第232条对“贩卖人口”的基本定义是“利用他人的个人或经济困难、以及与境外居留有关的无助境况，招募、运送、提供住宿或收留他人”，并以下列后续行为之一为目的：通过强迫其卖淫、工作、乞讨或从事刑事犯罪活动对受害者进行剥削；对受害者实施奴役或类似手段剥夺人身自由；非法摘取受害者器官。
 
-**廣而告之：尊敬的戰友，你的每一篇文字、每一段視頻、每一段社交媒體發文都是壓垮駱駝的一根稻草，歡迎加入我們****——**[**日本銀河系農場****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，歡迎訂閱我們的油管頻道：**[**郭文貴先生直播精選**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；歡迎關注蓋特獨家文貴先生大直播精選發佈賬號：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+符合上述罪状的被告可被处以6个月到5年徒刑。在此基础上，**被告如果对受害人使用暴力、以威胁或欺骗使其就范、通过绑架或假借他人名义诱拐，量刑可提高至****10****年徒刑**。
 
-聲明：文中內容根據郭文貴先生直播視頻整理，如果文字內容與視頻內容衝突則以原視頻為準，標題僅為概括，標題與視頻內容衝突之處僅代表作者個人觀點。
+相对西方国家的一视同仁，中共国**对买方和卖方的最高刑罚明显不匹配，对买方的打击力度要弱得多，**而且地方部门在执法中往往都是从轻、甚至不予处罚。中共政府在立法层面上肆意的放纵，变相鼓励人口买卖。中共恶法为罪恶背书，中共独裁治下的司法制度根本不保护普通人，锁链女事件绝不会是最后一起。
 
-歡迎喜聯盟進駐以及各農場兄弟姐妹們坐客串門，請通過以下方式關注及訂閱我們——
+参考链接：[贩卖人口在德国面临什么处罚](https://www.dw.com/zh/%E8%B4%A9%E5%8D%96%E4%BA%BA%E5%8F%A3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E9%9D%A2%E4%B8%B4%E4%BB%80%E4%B9%88%E5%A4%84%E7%BD%9A/a-60859462)
 
-Discord：[日本銀河系農場Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+*发布：tianzhihuan*
 
-YouTube：[日本銀河系農場](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民熱線](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[銀河系檔案放映館](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文貴先生直播精選](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、[喜馬拉雅日本銀河系農場 G-News](https://gnews.org/zh-hant/author/jgalaxy2021/)、[日本銀河系農場-阿爾法星球](https://gnews.org/zh-hant/author/galaxyalphaplanet/) 、[銀河勇氣之星](https://gnews.org/zh-hant/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hant/author/newfoc/) ；
-
-蓋特：[日本銀河系農場@himalayajgalaxy蓋特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本銀河系農場](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
