--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,29 +1,36 @@
 ---
-title: 日本疫苗接种死亡平均每天4例，专家：不影响继续接种
+title: 民调显示，大多数美国选民支持军事保卫台湾
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046397/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2046468/)
 
-撰稿：东京樱花团/盖特第一批注册
+#### 撰稿：彩虹
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/日本疫苗接种死亡平均每天4例，专家：不影响继续接种.png)来自网络
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-2-2.jpg)图片来源：华盛顿时报
+2月21日，《新闻极限》报道，“国家行动大会”（Convention of States Action）联合民调机构特拉法加集团（Trafalgar Group）针对乌克兰和台湾做了一项民意调查。民调结果显示，选民对美国派遣地面部队保卫乌克兰边境的支持度不高，但对军事保卫台湾的支持度却很高。
 
-18日，日本厚生省（MHLW）召开了专家小组会议，讨论接种中共病毒（新冠病毒Covid-19）疫苗与不良反应之间的关系。
+根据这个1月份的民调，仅有15.3%人投票可能认为在俄罗斯入侵乌克兰的情况下应该派遣美国军队。相比之下，大多数58.1%人投票可能认为，如果台湾被中共国入侵，拜登政府应该使用美国的军事资产来保卫台湾。
 
-根据公开文件，从2021年2月17日开始接种到2022年1月23日，有1450人在接种疫苗后死亡（辉瑞公司1382人，摩德纳公司67人，阿斯利康公司1人）。 在2022年1月24日至2月4日期间，新增 24起死亡病例（辉瑞公司20起，摩德纳公司4起，阿斯利康公司0起）。
+“国家行动大会”主席马克·梅克尔（Mark Meckler）在一份声明中写道：“我们的领导人经常忘记，美国人民在理解海外威胁的性质方面有很大的智慧，所有党派的选民都坚定地支持美国对自由和民主的台湾进行军事防御，面对来自中共国日益增长的危险，尽管这伴随着巨大的风险，可能使我们的国家付出高昂的代价。相反，虽然选民们显然同情乌克兰，并支持通过外交和其他手段协助他们，但如果与俄罗斯发生冲突，却不支持美国的军事干预。拜登政府应该注意到这一点。”
 
-截至2022年2月4日，共有1,474人在接种疫苗后死亡的报告。
+根据民调结果，大多数接受调查的可能选民认为，如果俄罗斯入侵乌克兰，美国应该有限度地介入（84.8%）。
 
-辉瑞公司第三剂疫苗接种后的死亡人数在2022年1月23日前为2人，2022年1月24日至2月4日期间为11人。 摩德纳第三剂疫苗接种后报告的死亡人数在2010年1月23日前为1人，2010年1月24日至2月4日期间为4人。死亡总数为18例。1月24日至2月3日期间死亡人数为15例。
+- 只有31.1%的人认为美国应该提供物资和军事武器。
+- 只有30.5%的人认为美国应该只在外交领域施压。
+- 只有23.2%的人认为美国应该提供美国的军事顾问。
 
-专家小组指出，“目前，虽然第三剂后出现死亡病例，不影响继续接种”。
 
-信息源：
+根据民调，在台湾主权问题上，美国选民的支持在民主党、共和党和独立人士中都是一面倒。在台湾被中国入侵时，
 
-[高齢女性が目立つワクチン接種後死亡報告は3回目18件含めて1474件](https://hc.nikkan-gendai.com/articles/277294?page=3)
+- 60.8%的共和党选民支持使用美国军事资产来保卫台湾。
+- 57.4%的独立选民支持使用美国军事资产来保卫台湾。
+- 56.2%的民主党选民支持使用美国军事资产来保卫台湾。
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+
+**新闻来源**
+
+[**Poll: Majority Opposes US Defending Ukraine, But OK With Taiwan**](https://www.newsmax.com/newsfront/trafalgar-group-taiwan-border-defense/2022/02/21/id/1057819/)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
