--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,45 +1,49 @@
 ---
-title: 真想买喜币的美国战友完全可以合法买,懂HPay的就会用
+title: 郭文贵直播摘要和音频 2022.02.20
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046393/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2046461/)
 
-G-TV视频链接：[https://gtv.org/video/id=621262f51408ee3a03a25717](https://gtv.org/video/id=621262f51408ee3a03a25717)
+摘要撰稿人：文俊
 
-**郭文贵先生：**美国人现在是全世界数字货币80%的拥有者，如果按照这个说的话，美国几乎是80%到99%都是不合法的。这是美国最守法的国家。但你别忘了美国的财富从第一天到今天，积累的过程当中，按照美国今天的法律来讲，绝大多人的财富全都可以给他分掉，都不合法。这也是美国人这个国家守法，他知道法律的重要，同时他们也知道怎么会用法。他80%的全球的数字货币都在美国人手里边，我不相信他们都是合法通过KYC的。而且你像那个赵长鹏那个垃圾，他就没有KYC，那不都给美国人买走了么，是吧！
+音频提供者：左媛
+![](https://assets.gnews.org/wp-content/uploads/2022/02/f037a29b945619ea8de95510d15dc5f2-3.jpg)
+### 视频链接：
 
-真的想买的战友的美国人，我觉得你是完全可以合法买的，有很多。我再重申一遍，全世界没有一个国家有数字货币的法律，所有的所谓的监管的法律完全都是胡扯的。你告诉我美国谁是数字货币的监管者，它没有机构啊。SEC说这是证券它不能管。金融管理会它也管不了。没有一样管得，没有这个部门，这是一个角度。大家受的这个影响是不应该的。
+[https://gtv.org/video/id=62123b3508ba8a07b19fce62](https://gtv.org/video/id=62123b3508ba8a07b19fce62)
 
-第二个，你合法地被美国政府说：你可以买那个H币什么的。就说法律全允许的，像现在买BitCoin一样在美国这样的买，BitCoin是代理商让你买的，同样H币也会在美国也会发生。快则三个月，慢则不会超过六个月，但是这个时间是真的不确定的，因为这个美国政府谁也说不了。我认为就合法的像买比特币一样，买以太坊币一样，可以在美国买，美加。
+### 音频链接：
 
-那么H-Pay在全世界都是可以使用的，跟它没有任何关系。如果你懂得用H-Pay的时候，这个KYC的问题跟你就没有关系了。我就说到这儿，你们懂的。谢谢！
+### 摘要：
 
-字幕来源：[2022年2月4日《文贵大直播》全文字版](https://gnews.org/zh-hans/1961700/)
+- 习和普京在冬奥会期间两人单独利用翻译机器绝密会谈了2小时
+- 普京和习绝密会谈内容之一，不打台湾不打乌克兰，咱两都得完蛋
+- 乌克兰的战争三天前已经开始
+- 台湾马上有动静
+- 普京和习身体都不好，两人互相支持讨论有危机如何解决
+- 普京和习近平绝密会谈内容：暗杀，网络超限战，经济搞乱，西方领导人小视频，难民，连战儿子当台湾经济特区领导人，斩首蔡和陈水扁
+- 普京跟巴西总统说，不要和西方掺合在一起，你也管不了
+- 打乌克兰台湾是假，主要是用乌克兰台湾干掉美国和欧洲
+- 而香港问题是西方国家道德沦丧
+- 通过最近出现的锁链女 彭帅 谷爱凌事件，更加证明了中国人的自私冷漠
+- 新中国联邦第一大事是灭共，第二就是把教育搞好，GEDU下周四有一次大直播关于教育
+- GEDU老师一堂课是100美金起，工资4000-6000美金，无论学科。有躺币奖励，可以选择喜币或者HDO支付
+- GEDU直属七哥管理，不再属于磐石农场，也不属于联盟管理
+- 新中国联邦未来的教育，老师的好坏由学生说了算，孩子的好坏由第三方评估
+- 新中国联邦的GEDU现在开展的是线上课程，很快在日本、欧洲、美国、加拿大建立线下学校，根据学生的数量建立和开展
+- 新中国联邦教育基金启动费1000万美元，已经到位，未来会达到100亿
+- 冬奥会结束后，金融界的瓦比比事件将接连发生，从演艺界开始
+- 金无怠死前写给美国的信说，一生最后悔的是加入中共共产党做间谍
+- 中共特务就是利益 无知 洗脑 把柄 的结果
+- 一旦开战，大连和辽宁会是重灾区
+- 加拿大土豆会变成土豆泥
+- 星期三直播
 
-编辑整理：Jacques；
 
-字幕文件制作：小满；
 
-视频制作及上传：Cindy；
 
-G-News发布：小满；
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+编辑发布：闪电训练
 
  
 
