--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,41 +1,66 @@
 ---
-title: GClubs卡将调整政策把战友分层次分时间分范围连在一起
+title: 加拿大“自由车队”运动发言人宣布从渥太华和平撤离
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046361/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2046426/)
 
-G-TV视频链接：[https://gtv.org/video/id=621262801408ee3a03a256bd](https://gtv.org/video/id=621262801408ee3a03a256bd)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GettyImages-1238619499-1200x802-1200x802-1.jpg)2022 年 2 月 19 日，当警察从渥太华市中心驱逐撤离的抗议者时，一名警察砸碎了卡车的窗户。图片：Dave Chan摄/法新社 / 盖蒂图片社
 
-**郭文贵先生：**所有的咱们现在整个咱们这个G-Clubs在半年内到一年内不会停的，大家不要……一定会继续卖的，但是卖的政策一定会调整，你比如说原来的一万的让不让你升，让你买新的不一定让你改，为什么？
+《大纪元时报》2022年02月20日加拿大渥太华报道，
+翻译：
 
-大家会看到未来这整个G-Clubs它功能出来以后你们就明白了，我还不方便说，G-Clubs不是为了卖卡而卖卡，G-Clubs就是把咱们的战友分层次、分时间、分范围地和新中国联邦的未来连在一起的，所以说G-Clubs政策会调整，停卡是不可能的，好吧？我暂时说到这儿，但是呢有些政策现在还不能说，谢谢！
+当渥太华警方连续第二天对反对政府强制疫苗政策的卡车司机的抗议行动进行升级时，被称为“自由车队”运动的发言人呼吁和平撤离，称他们不会成为“执法部门的出气筒”。
 
-字幕来源：[2022年2月4日《文贵大直播》全文字版](https://gnews.org/zh-hans/1961700/)
+2月19日，在渥太华市中心的埃尔金勋爵酒店举行的新闻发布会上，退休的加拿大军官汤姆·马拉佐(Tom Marazzo)说，许多卡车司机认为，对他们和他们的家人来说，最好的行动方案是撤离，以避免进一步的伤害。马拉佐说：“作为一场运动，我们选择和平地撤出渥太华的街道。被警察残忍虐待没有任何好处。”
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2027.png)视频截图
+警方于2月18日开始升级他们对渥太华抗议者的行动，并在2月20日上午宣布，到目前为止，他们已经逮捕了191人，拖走了57辆车。骑警和步行的警察向示威者推进，在某些情况下，用马匹将示威者撞倒。
 
-编辑整理：Jacques；
+一些警察全副武装，包括突击步枪和似乎是橡皮子弹发射器。有些人挥舞着警棍和胡椒喷雾，有些人砸碎卡车车窗，把卡车司机从车上赶下来。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GettyImages-1238625967-Large-600x400-1.jpg)2022 年 2 月 19 日，警方在渥太华与示威者对峙。图片：Alex Kent摄/盖蒂图片社
+马拉佐说：“这是我们历史上一段黑暗的日子，之前如果有人告诉我，我们的总理会拒绝对话，并选择用暴力对付和平抗议者，我这辈子都不会相信。”
 
-字幕文件制作：小满；
+总理贾斯汀·特鲁多(Justin Trudeau)继续拒绝与卡车司机车队的组织者会面，该车队于1月28日和29日抵达渥太华。
 
-视频制作及上传：Cindy；
+该车队最初是由卡车司机发起的抗议活动，反对联邦政府要求跨境旅行的卡车司机强制接种疫苗。在全国各地的许多加拿大人开始加入或表达他们对结束各种中共病毒强制和限制政策的支持后，它变成了一场更大的运动。
 
-G-News发布：小满；
+在车队抵达渥太华之前，在1月26日的新闻发布会上，特鲁多将抗议者斥为“一小撮持有不可接受的观点的边缘人……”
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+2月14日，特鲁多成为加拿大第一位行使《紧急状态法》的总理，旨在将其作为平息渥太华和全国其他地区类似抗议活动的手段。渥太华警方称渥太华的抗议活动是“非法的”。
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+自由车队的几个组织者已经被逮捕，包括2月17日被捕的克里斯·巴伯(Chris Barber)和塔玛拉·利奇(Tamara Lich)。负责协调抗议活动安全的前加拿大皇家骑警丹尼尔·布尔福德(Daniel Bulford)于2月18日被捕，后来被无罪释放。
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+马拉佐不知道是否有针对他的逮捕令，他说渥太华的抗议活动没有涉嫌任何非法活动。
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+这位退休军官批评了他所说的将抗议者描绘成“反政府”的“主流媒体”，并指出车队组织者一直在努力与联邦政府建立对话，但没有成功。马拉佐说，联邦政府试图“恐吓”自由车队是徒劳的，因为这是一场草根运动，如果被清除，“其他人将填补他们的角色”。
 
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+他说：“我从未想过有一天，执法人员会因为公民行使自由集会和自由言论的自由权利和宪章赋予我们权利而被逮捕。”马拉佐还证实，他的银行账户已被冻结，信用卡被取消。他说，他配偶的信用评分也在2月18日下降了109分，尽管她没有和他一起在渥太华。
 
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+马拉佐说，草根运动将重新组合，并计划他们的下一步行动。他说：“这是为争取我们的自由的整场大战中的一场战斗。” 他补充说，联邦一级的所有议员都“辜负了我们”。
 
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+他说：“我们选举这些人是为了让他们代表我们的最大利益，不是为了让他们像国王和王后一样对我们发号施令。你能听到民主的声音吗？民主现在已经死了，它死亡的声音比卡车司机的喇叭声还要响亮。”
 
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+**简评：**
+虽然加拿大作为民主国家很多年了，但此刻加拿大的民主和自由正在被一点点地侵蚀，加拿大的民主和自由需要被勇敢的加拿大人来守护。加拿大总理特鲁多竟然公然宣称采用《紧急状态法》是为了加拿大人的安全，保护人们的工作，并恢复对社会的信心。如果真是为了这些，特鲁多就应该取消强制疫苗政策，让大家能自由的选择是否愿意接种疫苗。
 
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+全球经济的下滑就是因为存在以疫情为借口的限制政策，阻碍了一切人类经济活动。当加拿大卡车司机在前线为捍卫自由，民主抗争的时候，“主流媒体”却将这一场抗议形容为“反政府”活动，“主流媒体”已然变成了“谎言媒体”。加拿大政府为了早日结束这场抗议活动，竟然想载脏陷害抗议人员，还计划在抗议结束后继续逮捕集会人员并冻结银行账户实施经济制裁等等劣行，这些都证明了加拿大政府已经将自己变成类共产主义的极权政府。为了抗议人员的人身安全，加拿大卡车抗议的组织者已经决定战略性地撤退，可以预期，加拿大接下来一定会有更多守护自由、民主，反抗暴政、独裁的抗议活动将上演。
+
+新闻链接：[Not Going to Be a ‘Punching Bag’ for the Police: Freedom Convoy Spokesman Announces Peaceful Withdrawal From Ottawa](https://www.theepochtimes.com/not-going-to-be-a-punching-bag-for-the-police-freedom-convoy-spokesman-announced-peaceful-withdrawal-from-ottawa_4290108.html)
+
+*翻译/简评: kkoto(芬兰大灰狼)*
+
+*校对: Harvey（叶知秋）*
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
+
 
  
 
