--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,23 +1,47 @@
 ---
-title: 乌克兰总统：我们谁也不怕！拒绝领土遭分割！
+title: 管孩子功歸七嫂,但七哥有不討論大人事和不撒謊兩原則
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2046292/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046411/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2345截图20220222145924_副本.png)图片来源：zelenskiy.official
-俄罗斯正式承认乌克兰境内两个亲俄分离主义人士控制的地区顿内茨克（Donetsk）、卢甘斯克（Lugansk）为独立实体，接着派遣部队以「维和人员」身分进入当地，加剧了西方国家担心引发大战的忧虑。
+G-TV視頻鏈接：[https://gtv.org/video/id=621263301408ee3a03a25741](https://gtv.org/video/id=621263301408ee3a03a25741)
 
-2月22日，乌克兰总统泽伦斯基（Volodymyr Zelensky）对全国发表谈话时，指控俄罗斯破坏了为和平所做的努力，并拒绝对领土分割一事让步。
+**郭文貴先生：**這說起兒女，真的是我這一點真的感恩你七嫂。我覺得我是一個很寵孩子的人，如果按照我寵孩子，這倆孩子肯定不是今天這樣。你七嫂那是屬於很認真的、很嚴肅的。她家教就很嚴，她爸她媽都屬那種非常強悍型的，而且是非常非常嚴格家規的人。所以她從小的規矩，她就是這麼長大的，你七嫂子很強勢，你看我這樣的人都被她整得服服貼貼的，你想想她有多強勢吧，你想想她有多強勢，是吧？她對倆孩子就很強勢，就管得很嚴，這主要歸功你七嫂。
 
-据郭文贵先生爆料称，普京与习近平冬奥秘密会谈，普京计划拿下乌克兰从而要征服欧洲。希望乌克兰请坚持住，欧洲国家不要坐视不理，请对乌克兰施以援手，不然下一个就是你们自己。
+但是我有兩樣原則這絕對是從小到大的，就是你看比如說我們家家規：孩子不要討論大人的事兒。我就覺得這個世界上沒有任何人你可以討論你父母，你個小屁孩兒討論父母的事兒，你不要介入到父母；而且中國人所有孩子都要（介入）父母的私人感情，父母的什麼恩恩怨怨全介入。
 
-新闻来源：[yahoo](https://tw.news.yahoo.com/%E7%83%8F%E5%85%8B%E8%98%AD%E6%8B%92%E8%AE%93%E9%A0%98%E5%9C%9F%E9%81%AD%E5%88%86%E5%89%B2-%E7%B8%BD%E7%B5%B1%EF%BC%9A%E6%88%91%E5%80%91%E8%AA%B0%E4%B9%9F%E4%B8%8D%E6%80%95-031227561.html)
+我最小的發小，最好的發小跟我爹我娘是非常不和的，非常不和的，但是它半點兒不影響我和他好。你說我那個照片跟前面的那個小伙子他爸爸就是我們當地的隊長，現在都在世呢，他就是跟我父親非常不和，但是它不影響我半點兒跟他好。你孩子不要介入到父母的糾紛當中去，也（別介入）父母的感情，這是我們的原則。
 
-撰稿/发布：一叶知秋
+另外一個就是我們家的孩子絕對不能撒謊。只要撒謊那是絕對不可以，所以他從來不撒謊。另外一個就是大家能看到我們作為山東人，我們這個家教裡邊孝敬。那孩子孝敬就別提了，就我兒子、我女兒的孝敬你們不可相信的，就是這種家庭文化，而且特別。就我們家庭的孩子從小跟我事業、生意完全沒有關係，而且是純粹的，純粹的。
 
-**更多资讯，请关注：**
-[多伦多蓝莲花农场 Gettr](https://gettr.com/user/Blue_Lotus)
-[多伦多蓝莲花农场 YouTube](https://www.youtube.com/channel/UCy1z2nsBLlE7BZyS_a_BMWw)
-[多伦多蓝莲花农场 Discord](https://discord.gg/awC74U4YwJ)
+你去想想，他們從小金融上、生意上都做得很成功，財務上的獨立，對家庭上按著山東這種孔子家教的原則，對父母的孝敬，然後在社會上不撒謊、絕對不欺負軟的，那就我和你七嫂子不允許他半點兒欺負人，絕對善良。所以說我覺得這一點兒上真的是，我覺得這是個中國文化和現代文化現代化以後的成功的家庭，我認為是這樣子的。
+
+字幕來源：[2022年2月4日《文貴大直播》全文字版](https://gnews.org/zh-hans/1961700/)
+
+編輯整理：Jacques；
+
+字幕文件製作：小滿；
+
+視頻製作及上傳：Cindy；
+
+G-News發佈：小滿；
+
+**廣而告之：尊敬的戰友，你的每一篇文字、每一段視頻、每一段社交媒體發文都是壓垮駱駝的一根稻草，歡迎加入我們****——**[**日本銀河系農場****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，歡迎訂閱我們的油管頻道：**[**郭文貴先生直播精選**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；歡迎關注蓋特獨家文貴先生大直播精選發佈賬號：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+聲明：文中內容根據郭文貴先生直播視頻整理，如果文字內容與視頻內容衝突則以原視頻為準，標題僅為概括，標題與視頻內容衝突之處僅代表作者個人觀點。
+
+歡迎喜聯盟進駐以及各農場兄弟姐妹們坐客串門，請通過以下方式關注及訂閱我們——
+
+Discord：[日本銀河系農場Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本銀河系農場](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民熱線](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[銀河系檔案放映館](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文貴先生直播精選](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、[喜馬拉雅日本銀河系農場 G-News](https://gnews.org/zh-hant/author/jgalaxy2021/)、[日本銀河系農場-阿爾法星球](https://gnews.org/zh-hant/author/galaxyalphaplanet/) 、[銀河勇氣之星](https://gnews.org/zh-hant/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hant/author/newfoc/) ；
+
+蓋特：[日本銀河系農場@himalayajgalaxy蓋特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本銀河系農場](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
