--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,26 +1,23 @@
 ---
-title: 中共国聚焦非洲
+title: 中日财经爆&#124;日经指数2月22日收于26,449点 连续4个交易日下跌
 ---
-`喜马拉雅意大利罗马达芬奇农场` [轉載自GNews](https://gnews.org/zh-hans/2046512/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046598/)
 
-翻译/整理: 萧亦
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Immagine-3.jpg)图片来自timeforafrica.it
-十三年达到了 230 亿美元。几乎是美国、日本、德国和法国机构提供的总和的两倍多。这是中共国投资银行(中国进出口银行和国家开发银行)在 2007 年至 2020 年期间向撒哈拉以南非洲国家提供贷款：建设公路、铁路、医院、政府大楼。巨额资金显示了非洲大陆对北京的重要性。长期有计划的经济渗透。一个日益成为现实的“中共国非洲”，这让欧洲感到担忧。
+撰稿：东京樱花团/peterwong
 
-随着人口的快速增长、闪电般的城市化和丰富的资源，许多观察家认为这将是非洲世纪。如果是这样，中共国将扮演更多主角的角色，他们清楚地知道，巩固自己在世界上的地位的道路也从这里经过。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/日经指数2月22日收于26449点-连续4个交易日下跌.png)[图片来源](https://www.google.com/search?q=%E6%97%A5%E7%BB%8F%E6%8C%87%E6%95%B0&amp;rlz=1C1YKST_enUS900US901&amp;oq=%E6%97%A5%E7%BB%8F%E6%8C%87%E6%95%B0&amp;aqs=chrome..69i57j0i12i512l4j46i12i512j0i12i512l4.1901j0j15&amp;sourceid=chrome&amp;ie=UTF-8)
 
-在 20 年的时间里，中共国已发展成为非洲大陆最大的贸易伙伴、最大的基础设施贷款人和外国直接投资的主要来源。中非贸易数据也提醒我们这一点，刚刚创下历史新高：2021年为2540亿美元，同比增长35%。南非、尼日利亚、安哥拉、埃及和刚果民主共和国是北京的五个最大贸易伙伴。
+22日东京股市因乌克兰局势收紧，几乎全部贬值。日经平均指数（225只成分股）较前一交易日最大下跌逾650点，最终下跌461.26点，收盘报26,449.61点，连续4个交易日下跌。
 
-钻石、铜、锂、钴、铝土矿、石油：这些是中共国从非洲想得到的重要资源。已经有48个非洲国家成为了习近平九年前发起的丝绸之路的一部分。在非洲的扩张最具有重要的战略意义是从这里可以进入红海、苏伊士运河和欧洲，以及波斯湾和印度洋的水域。
+东京证交所股价指数（TOPIX）显示整个东京证券交易所第一部的价格走势，下跌29.60点，收盘报 1881.08点。
 
-关于中共国与非洲在安全事务上的合作。中共国政府否认了美国情报部门关于北京正在赤道几内亚建设军事基地的消息（这将是继2017年在吉布提开设的第二个军事基地）。同时中共国已宣布参与反恐活动和联合演习。2015 年已经向非洲联盟承诺 1 亿美元，用于资助非洲待命部队，即非洲大陆的维和部队。
+消息来源:
 
-不仅是大型基础设施均由中共国公司建造，还有对矿山的直接或间接控制（尤其是刚果的钴和几内亚的铝土矿）。中共国的渗透也可以从一些分析人士所说的“建筑外交”中看出。中共国近年来无偿或无偿贷款建设。从2012年在亚的斯亚贝巴建成的非洲联盟总部，到上周竣工的埃塞俄比亚新商业银行总部，再到下个月竣工的津巴布韦新议会，另外还包括24 个总统或总理官邸、26 个议会。
+[日経平均終値、４６１円安の２万６４４９円](https://www.yomiuri.co.jp/economy/20220222-OYT1T50171/)
 
-原文链接: [https://www.repubblica.it/economia/affari-e-finanza/2022/02/21/news/soldi\_vaccini\_strade\_pechino\_punta\_sulla\_chinafrica-338157635/?ref=drla-f-2](https://www.repubblica.it/economia/affari-e-finanza/2022/02/21/news/soldi_vaccini_strade_pechino_punta_sulla_chinafrica-338157635/?ref=drla-f-2)
-
-责任编辑/发布:意大利达芬奇农场   萧亦
-
+*校对：东京樱花团 / 文小白*
+*发布：东京樱花团 / 老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
