--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,49 +1,26 @@
 ---
-title: 台湾近日急症突增 三日猝死超百人
+title: 台湾｜ 新党主席吴成典向汪洋表决心：分三阶段实现国家统一
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2045985/)
+`關注組` [轉載自GNews](https://gnews.org/zh-hans/2046053/)
 
-作者：纽约香草山教育部—Noemi
+**撰文/ 港台前线｜发布日期/ 22/02/2022**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/新黨主席吳成典向汪洋表決心：分三階段實現國家統一.jpg)
+**更多资讯请关注官方盖特｜please follow our Gettr （**[**https://gettr.com/post/pl6w8he0b9**](https://gettr.com/post/pl6w8he0b9)**)
+**
 
+中共官媒新华社报导指，全国政协主席汪洋昨日（21日）在北京以视像会议方式会见台湾新党主席吴成典一行，并欢迎他们出席北京冬奥会闭幕式。
 
+汪洋表示，台湾同胞以不同方式积极参与冬奥会，是两岸一家亲、共圆中国梦的生动体现，在中华民族走向伟大复兴的进程中台湾同胞不能缺席也不会缺席。他强调，台湾新党长期旗帜鲜明，始终支持统一、反对“台独”，为推动两岸关系和平发展、推进祖国和平统一进程鼓与呼、起而行，大陆同胞看在眼里、记在心里。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
+对此，吴成典亦回应称，两岸同胞同文同种、血浓于水，两岸统一的历史大势无法阻挡，新党愿作先锋，在推进国家统一的征程上，共同点燃属于两岸人民的希望圣火。
 
+另外，台媒《联合报》报道引述吴成典发言时指出，两岸统一预期将经过三个阶段：第一先重回九二共识、一个中国，重启两岸事务性协商；第二阶段是结束两岸军事敌对状态，建立军事安全互信机制；最后阶段则彻底实现国家统一。
 
+早前，郭文贵在直播中透露，中共党魁习近平与俄罗斯总统普京经闭门会议后达成共识，决定共同上演“痞子政治”，夺取乌克兰和台湾，今日早些时候，俄罗斯总统普京承认乌克兰东部两大亲俄势力范围成为独立国家，并同时派遣军队入驻，被视为正式对乌发动的侵略行为。
 
-当地媒体2月21日报道，据全台各县市消防局的资料显示，台湾近两日急病救护事件竟累积达到了628起、猝死则高达101人，至于死因需要进一步了解相关信息。
+这令人不得不担忧，中俄两大极权势力野心的下一步，是否轮到台湾！
 
-报道称，自19日至21日午间，台湾各地的急症救护案件累积超过600起，猝死及到院无呼吸心跳患者高达101人，40-60岁年龄段的猝死患者则占到了整体死亡人数的将近一半，而其中年纪最小的一位男性死者仅有35岁。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide5-5.jpg)
-目前，台湾地区完整接种毒疫苗人数已经超过了总人数的3/4，第三剂接种人数也已超过1/3。
-
-此前，郭文贵先生爆料，中共毒疫苗灾难将导致全球猝死人数在冬春季开始激增，“随地倒”现象将在疫苗接种率较高的地区频繁出现。同时，与普通高龄猝死患者所不同的是，毒疫苗引发的猝死人群将主要集中在中青年群体。
-
-参考链接：
-[寒流奪命！全台百人猝死 600多人不適送醫](https://www.chinatimes.com/realtimenews/20220221002378-260405?ctrack=pc_main_life_p04&amp;chdtv)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
-
-总编/编辑：DM
-校对/发稿：为真不破20
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
-
-
+来源｜[新華社](http://politics.people.com.cn/n1/2022/0222/c1024-32356622.html)、[郭文貴蓋特](https://gettr.com/post/pvwb8qfd01)、[聯合報](https://udn.com/news/story/7331/6115240?from=udn-catebreaknews_ch2)
 
  
 
