--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,25 +1,20 @@
 ---
-title: 英解除病毒禁令恐现耐疫苗变异毒株
+title: 港闻｜疫苗通行证周四起实施 食卫局不排除日后进一步收紧规定
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046483/)
+`關注組` [轉載自GNews](https://gnews.org/zh-hans/2046587/)
 
-撰稿：东京樱花团/盖特第一批注册
+**撰文/ 港台前線｜發佈日期****/ 22/02/2022**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/疫苗通行證週四起實施-食衛局不排除日後進一步收緊規定.jpg)
+**更多资讯请关注官方盖特｜please follow our Gettr （**[**https://gettr.com/post/pl6w8he0b9**](https://gettr.com/post/pl6w8he0b9)**)**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/英解除病毒禁令恐现耐疫苗变异毒株.png)[图片来源](https://www.newsweekjapan.jp/kimura/2021/02/454800.php)
+港府宣布“疫苗通行证”自本周四起实施，范围涵盖食肆、街市、超市及商场等公共场所，要求所有12岁以上市民进入公共场所前须主动出示疫苗接种卡，同时亦需随身携带疫苗接种卡，以配合执法人员抽查。
 
-伦敦，1月21日路透社，英国英格兰地区的首席医疗官克里斯·惠蒂（Chris Whitty）在新闻发布会上针对政府宣布取消对该地区中共病毒（新冠病毒Covid-19）的所有法律控制措施，警告说如果出现新的变种病毒，疫苗的作用将被削弱。
+食物及衞生局副秘书长(衞生)蔡杰铭今晨在商台节目中表示，要取得“疫苗通行证”并非难事，仅需接种至少一针疫苗即可，蔡杰铭强调，现时进入商场买外卖、途经商场归家仍属豁免范围，但为了避免有市民“钻空子”，不排除日后进一步收紧相光规定。
 
-21日英国政府宣布取消染疫的人群进行自愿隔离的要求。此举遭到了科学家和反对派的怀疑。
+值得关注的是，医管局在配合宣布“疫苗通行证”的记者会上，被问到，“近期不幸离世的死者中，有多少人打过疫苗？”时，医管局行政经理刘家献一时语塞，显得不知所措，迟疑一阵后，竟然以“人都死了，再研究是否打过针已经没有意义”作答，最后，他再次重申，呼吁未接种者尽快接种新冠疫苗。
 
-惠蒂先生认为会出现新的变种病毒，有些会很快消失，但有些会造成严重问题。
+来源｜[疫情記者會](https://www.youtube.com/watch?v=InsYcqFl1Zg)
 
-信息源：
-
-[ワクチンに強い変異株が今後出現へ、英コロナ規制全廃で医務官苦言](https://jp.reuters.com/article/health-coronavirus-britain-variant-idJPKBN2KR05N)
-
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
