--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,43 +1,43 @@
 ---
-title: 贩卖人口罪中西方刑事处罚差异很大
+title: 直播历史:冬奥会变冬眠会普京随扈16人染病盘古狙击手死
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2046474/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046574/)
 
-#### **【雅典娜观察】和您一起洞察世界**
+G-TV视频链接：[https://gtv.org/video/id=621264611408ee3a03a25822](https://gtv.org/video/id=621264611408ee3a03a25822)
 
-整理/编辑：文泓
+**郭文贵先生：**所以今天七哥在这直说，今天大好的日子，大好的日子，共产党的冬奥会开没开成“冬眠会”你们自己评价去。普京这16个人染上病毒结果如何、你看看啥样儿吧。盘古后面死人，就地狙击手狙击队长死掉意味着什么？整个奥运会开幕式屏蔽掉盘古，又在盘古直播，这有多不要脸？所谓33国元首在全世界加在一起的钱、加在一起的力量连美国一个州都不如，我告诉你，美国，美英法，是吧？
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/12-28.png)图片来源：openDemocracy & 雅典娜设计组
+这过去都没去，如何……你这从过去大英帝国和美利坚共和国和中国的整个的外交史，对中国人的尊重和文明的来往，再看今天的冬奥会，中国人到了世界上人类上最差的程度，中国人再不救自己（就）没人救咱。
 
+现在共产党怕新中国联邦，怕七哥，怕盘古，我们新中国联邦我们所有战友们在H-Pay全球流行、金融新未来、制定新金融标准情况下，更应该看到我们的未来，是吧？这个今天的直播非常有意义！虽然一夜没睡觉，很兴奋，随时紧急大直播啊，好不好？我就今天我就说到这儿，我先下线。
 
-自中共篡政以来贩卖人口犯罪从未停止过，现在社交媒体上广为引述的一个说法是，在中共国买一个大活人受到的刑事处罚，比买一只珍稀野生动物还要轻。那么同样的罪名，在中西方法律规定有何不同？
+字幕来源：[2022年2月4日《文贵大直播》全文字版](https://gnews.org/zh-hans/1961700/)
 
-中共国刑法有关“拐卖妇女、儿童罪”的规定是：拐卖妇女、儿童的，处五年以上十年以下有期徒刑，并处罚金。有特别严重情节的可以判处十年以上有期徒刑或者无期徒刑，甚至死刑。
+编辑整理：Jacques；
 
-对于买家一方，中共国刑法中原本称对于“没有虐待行为”的买家“可以不追究刑事责任”，2015年8月29日中国人大通过的刑法修正案(九)将该条款修改为“收买被拐卖的妇女、儿童，对被买儿童没有虐待行为，不阻碍对其进行解救的，可以从轻处罚；按照被买妇女的意愿，不阻碍其返回原居住地的，可以从轻或者减轻处罚。”
+字幕文件制作：小满；
 
-刑法第二百四十一条单列第一款规定，“收买被拐卖的妇女、儿童的，处三年以下有期徒刑、拘役或者管制”。就是说，**收买被拐者最高只会判刑****3****年。**
+视频制作及上传：Cindy；
 
-在西方发达国家，德国的贩卖人口案件多涉及偷渡、黑工或强迫卖淫，贩卖人口刑罚规定如下：
+G-News发布：小满；
 
-主要涉及有组织的偷运人员（包括未成年人）非法入境，强迫从事卖淫或其它非法劳动，多由犯罪团伙跨境协同进行。**因此法律也针对对这一链条的各个环节，只要参与相关活动，不论是买是卖，都要承担同等刑责。**
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
-德国刑法第232条对“贩卖人口”的基本定义是“利用他人的个人或经济困难、以及与境外居留有关的无助境况，招募、运送、提供住宿或收留他人”，并以下列后续行为之一为目的：通过强迫其卖淫、工作、乞讨或从事刑事犯罪活动对受害者进行剥削；对受害者实施奴役或类似手段剥夺人身自由；非法摘取受害者器官。
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-符合上述罪状的被告可被处以6个月到5年徒刑。在此基础上，**被告如果对受害人使用暴力、以威胁或欺骗使其就范、通过绑架或假借他人名义诱拐，量刑可提高至****10****年徒刑**。
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
 
-相对西方国家的一视同仁，中共国**对买方和卖方的最高刑罚明显不匹配，对买方的打击力度要弱得多，**而且地方部门在执法中往往都是从轻、甚至不予处罚。中共政府在立法层面上肆意的放纵，变相鼓励人口买卖。中共恶法为罪恶背书，中共独裁治下的司法制度根本不保护普通人，锁链女事件绝不会是最后一起。
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
-参考链接：[贩卖人口在德国面临什么处罚](https://www.dw.com/zh/%E8%B4%A9%E5%8D%96%E4%BA%BA%E5%8F%A3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E9%9D%A2%E4%B8%B4%E4%BB%80%E4%B9%88%E5%A4%84%E7%BD%9A/a-60859462)
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
 
-*发布：tianzhihuan*
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
 
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
