--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,48 +1,26 @@
 ---
-title: 孩子像你是彻底失败，长江后浪推前浪，哪一浪都不一样
+title: 【秘翻新视野】喜教育：恢复国人的正道信仰
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046443/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2046553/)
 
-G-TV视频链接：[https://gtv.org/video/id=621263a11408ee3a03a25798](https://gtv.org/video/id=621263a11408ee3a03a25798)
+**By:[秘翻新视野](https://gtv.org/broadcast/watch/6214806008ba8a07b1a1421a)**
 
-**郭文贵先生：**我觉得像文斌我觉得你有孩子，我就跟你视频两次我就知道，你是个典型的就是一千年前的中国人的脑袋、中国人的爹，说你一百年都对不住你，你是一千年。就是你宠孩子你把孩子宠得很坏很坏，你管孩子你会管得完全不着路，我都不知道你媳妇咋跟你来一起管孩子的？就你一看我就知道了，你孩子那一视频，就是一千年前中国爹的形式，所以你问这个问题非常好，我看到他能这样管孩子。
+**[2022-02-22](https://gtv.org/broadcast/watch/6214806008ba8a07b1a1421a)**
 
-Jessica，我看她宠孩子，上次我们去直播，我们的小Ryan出来，多可爱个小伙子，Ryan是吧？但是我一看我就担心了，这Jessica接下来就开始什么？就要把妈妈的所谓的想法强加给孩子，我给你说那就完了。
+**今日主题：**
 
-如果你孩子像你的时候，你就彻底失败了。就是哪怕你的优点他像你，你也失败了，孩子不像你，孩子比你强或者比你弱，只要不像你，就是成功。中国人说“长江后浪推前浪，一浪把后浪推到沙滩上”，我说不是的，长江后浪推前浪，一浪和一浪绝不一样，这才叫浪，哪一浪都不一样，没有重复的浪。“长江后浪推前浪，一浪和一浪都不一样”，这叫浪。
+**1.喜教育：恢复国人的正道信仰**
 
-中国人是“一浪一定要把前浪拍在沙滩上”，这不是中国的邪恶的心理吗？对立的心理，永远是对立的，不是你死就是我活。你看到真正的大海的浪真的是拍在沙滩上吗？是一浪和一浪都不一样，这就是我觉着它就是浪，你为什么要把对方拍在沙滩上？你为什么一浪更比一浪强？放狗屁的！
+**2.锁链女和彭帅事件：中共治下的互害模式**
 
-从来你孩子的浪你不会到大海，你不会到山上去，你永远在沙滩上待着，这不是扯吗？
+**3.没有教育没有希望，没有信仰没有未来**
 
-字幕来源：[2022年2月4日《文贵大直播》全文字版](https://gnews.org/zh-hans/1961700/)
+**🔗GTV鏈接：**[https://gtv.org/broadcast/watch/6214515e08ba8a07b1a12941](https://gtv.org/broadcast/watch/6214515e08ba8a07b1a12941)
 
-编辑整理：Jacques；
+发布:星星
 
-字幕文件制作：小满；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-321.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
