--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,22 +1,36 @@
 ---
-title: 深夜突发普京承认乌东两处区域
+title: 国际｜俄宣布承认乌东两地区独立并将驻军 郭文贵爆：台湾马上有动静
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2046433/)
+`關注組` [轉載自GNews](https://gnews.org/zh-hans/2046539/)
 
-**撰稿人：东**南
-![pastedGraphic.png](https://assets.gnews.org/wp-content/uploads/2022/02/DFD81797-2D00-464B-8CEC-A9D291F8FB99.jpeg)（图片来源网络）
-**昨日据俄国通信社的报道普京已经通告法国总统马克龙和德国总理朔尔茨，他即将签署关于乌克兰东部地区的法令，随后不久俄罗斯总统普京发布电视讲话承认乌克兰东部****2****个分离共和国独立地位。普京在电视讲话中表示：立即承认顿涅茨克人民共和国和卢甘斯克人民共和国的独立地位。普京要求俄罗斯议会****“****批准他的决定，并批准与两个共和国签订友好互助协定****”****，因为乌克兰东部局势恶化他对苏联解体后乌对俄罗斯的态度表示不满。普京称乌克兰加入北约是对俄罗斯安全的直接威胁。北约教官经常参加乌克兰的军事演习，在乌克兰建立的北约培训中心等同于北约军事基地，而且乌克兰还在计划制造自己的核武器，并称北约的基础设施也已抵达俄罗斯边境。**
+**撰文/ 港台前線｜發佈日期/ 22/02/2022**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Music-Clip.png)更多資訊請關注官方蓋特｜please follow our Gettr （[https://gettr.com/post/pl6w8he0b9](https://gettr.com/post/pl6w8he0b9))
+俄罗斯总统普丁于22日宣布认可Donetsk人民共和国和Lugansk人民共和国独立，这两地位于乌克兰东部，自2014年宣布独立后，俄罗斯是全球第一个承认两国主权的国家。“我请求恶罗斯联邦议会支持这决定，并批准与两共和国的友好互助条约”普丁表示，这两份独立认可协议将在不久的将来准备和签署。
 
-**随后不久据爱丽舍宫报道法国总统马克龙当晚召集国防和安全委员会商讨应对俄乌紧张局势的对策，也在俄罗斯通告发布后不久美国白宫新闻发言人珍****·****普萨基当地时间****2****月****21****日发表声明，针对俄罗斯总统普京签署承认顿涅茨克共和国和卢甘斯克共和国的命令作出回应表示：美国已经预料到俄罗斯会采取这种行动，并准备立即作出反应，总统拜登将很快发布一项行政命令，禁止美国人在顿涅茨克和卢甘斯克地区进行新的投资、贸易和融资，该行政令还将授权对决定在这两个地区活动的人实施制裁。**
+“我们要求那些接管并保留基辅权力的人，立即停止战斗活动，则继续流血的责任将落在乌克兰政权肩上”普丁在乌克兰东部局势向全国发表谈话中指出，乌克兰东部是古俄罗斯领土，乌克兰则是1917年共产革命后，由俄罗斯布尔什维克党人创立的，是**俄罗斯历史上不可分割的一部分**，并称乌克兰从未有拥有真正的国家传统。
 
-**随着乌东地区局势的持续紧张，东部的反对武装之后很可能会扩大对抗的规模，同时美国和世界热爱和平的国家对乌东的这二个区域和俄罗斯会颁布全方面的经济制裁，到那时除了俄乌全面断交外，物资匮乏能源油价都会飙涨，民众的生活还能维持现在的状态吗？答案看来一定是不能的。如果是再给你普京****20****年，还给人民的必将是另一个****“****委内瑞拉****”****。**
+“我们还知道已经有人发表声明，说乌克兰打算生产自己的核武器，这不仅仅是虚张声势，乌克兰拥有苏联的核武器技术和生产核武器的方法”据媒体报导普丁认为，这是乌克兰为攻击俄罗斯所做的准备。普丁在承认两分离共和国独立后随即签署法令，要求俄罗斯国防部以“维持和平”为由，向两独立共和国部属军队。
 
-文章参考：
+## 《布达佩斯安全保障备忘录》
 
-[https://www.voachinese.com/a/kremlin-putin-to-recognize-independence-of-separatist-regions-in-eastern-ukraine-20220221/6452779.html](https://www.voachinese.com/a/kremlin-putin-to-recognize-independence-of-separatist-regions-in-eastern-ukraine-20220221/6452779.html)
+乌克兰方面，则请求联合国安全理事会针对俄罗斯入侵危机召开紧急会议，乌克兰称1994年签署的《布达佩斯安全保障备忘录》使乌克兰以获得安全保障。但俄罗斯于2014年入侵克里米亚时，有认为该备忘录早已被破坏。。
 
-*编辑：cindy*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
+## 白宫警告 中共暗中支持破坏局势稳定
+
+俄乌军事危机，白宫警告说，如果俄罗斯入侵乌克兰而北京被视为支持俄罗斯的入侵行动，那么中共也将付出代价。五角大楼也表示，中共与俄罗斯领导人2月初发表的共同声明进一步显示中共已经决定在乌克兰局势方面与俄罗斯站在一起，美国对此表示警惕，认为中共暗中支持俄罗斯进一步损害了欧洲安全局势的稳定。
+
+早前，郭文贵于直播中爆料俄罗斯与中共的双鹰头行动，将同时发起对乌克兰、台湾的军事行动。2月20日的直播当中提到，普丁和习近平认为美国不会真的与俄罗斯、中共武力对抗，且中俄的双鹰头行动是为了让俄罗斯拿下欧洲、中共拿下亚洲，世界由俄罗斯、中共平分江山。
+
+“所以说，普京不是只取乌克兰，他弄的是欧洲”郭文贵表示，俄罗斯不开打，把欧洲人经济吓死、拖死，最后俄罗斯的西输云溪二号能源、天然气政策及俄罗斯的能源政策将占据整个欧洲。此外，郭表示俄罗斯的策略已经被德国默认，现任德国联邦总理奥拉夫·萧兹（德语：Olaf Scholz），德国、法国是不敢跟俄罗斯斗争的。
+
+## 俄乌战争开打 中共势必受到国际惩罚
+
+俄罗斯在乌克兰准备发动的军事侵略行为，美国将以经济惩罚予以反击。郭文贵称，美国以经济反击、惩罚俄罗斯，就好像俄罗斯并吞克里米亚的消息一样，是欧美不花一枪一弹取得最大利益，将俄罗斯拖垮。另外，国际对于纵容俄罗斯攻打乌克兰的人势必给予惩罚，与乌克兰灾难相关的国家一个都不会放过，郭表示专指“中共”。
+
+
+
+俄乌战事据郭爆料，早在17号便已发生，俄乌战争在第一发炮击便已开始并随时结束。而据双鹰头计划，（中共对）台湾马上会有动静，且郭文贵全面掌握相关情报。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
