--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,38 +1,48 @@
 ---
-title: 西喜时事新闻简报-美国时事篇
+title: 拜登和普京“原则上”同意举行峰会
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2046763/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2046986/)
 
-**翻译：土饭团**
+翻译：Lulumi
 
-[1.中共国如何做到可能已经用美元赢得了与美国的冷战](https://www.foxnews.com/media/china-cold-war-us-economic-warfare)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2041.png)2021年6月16日，在瑞士日内瓦，美国总统拜登（左）和俄罗斯总统普京在拉格朗日别墅举行的美俄峰会上会面。
 
-福克斯新闻2月21日电，佛罗里达州共和党众议员Michael Waltz在采访中概述了他认为中共国在与美国的冷战中所采取的长期经济战战略。中共国故意让美国在重要商品上依赖他们，这不仅是美国的就业问题，也是国家安全问题。我们不能依赖我们最大的对手来维持我们社会的运转，而美国公司绝对是同谋。
+白宫周日晚间证实，美国总统拜登“原则上”同意与俄罗斯领导人弗拉基米尔·普京举行峰会。
 
-2.[民主党战略家:北京奥运会是国际社会的“彻底失败”](https://www.foxnews.com/media/beijing-olympics-complete-failure-democrat-stategist-kevin-walling)
+根据白宫和法国总统马克龙办公室的声明，拜登表示，只有在俄罗斯不入侵乌克兰的情况下，会议才能举行，后者首先宣布了这一消息。
 
-福克斯新闻2月20日电，民主党战略家Kevin Walling周日表示，代表国际社会的2022年北京冬奥会是一次“彻底的失败”，历史最低的收视率证明了对北京主办冬奥会的普遍反对。国际奥委会坚称其在政治问题上是中立的，奥运会是“关于运动员和为运动员服务的”，但他们对“活跃在中共国的种族灭绝”视而不见的决定是国际社会的耻辱。
+根据爱丽舍宫的一份声明，该协议是在马克龙与美国和俄罗斯领导人分别进行了两次电话沟通后达成的，该声明称普京也“接受了这样一个峰会的原则”。
 
-3.[受中共国制裁的美国前最高外交官Pompeo将访问台湾](https://www.reuters.com/world/asia-pacific/mike-pompeo-who-riled-china-while-office-visit-taiwan-2022-02-21/)
+白宫新闻秘书珍·普萨基在一份电子邮件声明中说，峰会将在国务卿安东尼·布林肯和外交部长谢尔盖·拉夫罗夫定于本周晚些时候在欧洲举行的会议之后举行——这也只有在俄罗斯“不采取军事行动”的情况下才会发生。
 
-路透社2月21日电，台湾政府周一表示，前美国国务卿Pompeo在去年Trump总统任期结束卸任时受到中共国制裁，他将于下周访问台湾，并与蔡英文总统会面。台湾外交部表示，Pompeo和他的妻子将于3月2日至5日访问这个被中共国声称拥有主权的岛屿，还将会见外交部长吴钊燮，并在一个智库发表演讲。
+根据爱丽舍宫的说法，拜登和普京之间的会晤之后，将举行涉及“相关利益攸关方的会谈，讨论欧洲的安全和战略稳定”。
 
-4[.分析：如果俄罗斯对乌克兰采取行动，中共国将在外交上支持俄罗斯](https://www.reuters.com/world/europe/china-would-back-russia-diplomatically-if-it-moved-ukraine-2022-02-19/)
+普萨基说：“正如总统一再表明的那样，我们致力于开展外交活动，直到入侵开始的那一刻。”
 
-路透社2月19日电，专家表示，如果俄罗斯入侵乌克兰，加剧恶化北京与西方本已紧张的关系，中共国将在外交或经济上支持俄罗斯，但将停止提供军事支持。中共国会扩大与俄罗斯的经济合作，这将削弱西方承诺的制裁的影响。在国际社会如此两极分化的情况下，美国和西方可能会联合起来孤立或制裁中共国与俄罗斯。
+她补充说：“拜登总统原则上接受在（布林肯与拉夫罗夫的会晤）之后与普京总统进行会晤，同样，如果入侵没有发生的话。”
 
-5.[Nancy Pelosi:美国国会对中共国人权的承诺是两党共同的](https://www.aninews.in/news/world/us/us-congress-commitment-to-human-rights-in-china-is-bipartisan-nancy-pelosi20220222105222/)
+“我们总是准备好进行外交活动。如果俄罗斯反而选择战争，我们也准备好施加迅速和严重的后果。而目前，俄罗斯似乎正在继续准备，以便很快对乌克兰进行全面攻击”。
 
-ANI 2月22日电，美国众议院议长Nancy Pelosi周一重申了美国国会两党对中共国人权问题的承诺。“从最近对维吾尔族的种族灭绝，到对西藏文化、宗教和语言的侵略，到对香港基本自由的镇压，到整个中共国对记者、活动人士和持不同政见者的监禁，以及对台湾的恐吓等等，”她在美国国会及行政当局中国委员会的证词中说。
+与此同时，布林肯周日早些时候对CNN证实，他与拉夫罗夫的会面“完全取决于俄罗斯在未来几天的行动”，而且拜登“准备在任何时候、以任何形式与普京总统接触”，如果这能防止战争。
+
+另一方面，克里姆林宫官员在普京与马克龙通话后表示，他“强调美国和北约必须认真对待俄罗斯关于确保安全保障的要求，并以具体和实质性的方式回应这些要求，”俄罗斯塔斯社报道。
+
+这一声明是在拜登召开国家安全委员会会议时发布的，美国官员警告说，普京正在煽动虚假信息，以便在俄罗斯军队入侵乌克兰时指责该国。
+
+美国在一封信中警告联合国，俄罗斯军队正在编制“在军事占领后将被杀害或送入难民营的乌克兰人名单”。
+
+在莫斯科，美国大使馆周日就美国人在俄罗斯首都和圣彼得堡可能受到的威胁发出了安全警告。
+
+回放：拜登和普京最后一次通话是在2月12日，当时这位美国总统告诉俄罗斯总统，如果俄罗斯入侵乌克兰，美国和盟国将“果断回应并施加迅速和严重的代价”。
+
+素材链接：[axios.com][Biden and Putin agree “in principle” to hold summit](https://www.axios.com/biden-putin-agree-in-principle-to-hold-summit-macron-24b5e9de-4aab-4142-b2ce-d293f53c6bd5.html)
 
 * * *
 
-*审核：阿伯塔
+*审核：文乐
 校对：小东
 发稿：Nuevo唐人*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-6.jpeg)
-
-
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
