--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,27 +1,75 @@
 ---
-title: 首相宣布结束强制限制的同时 英国将为75岁以上的老人注射第4剂疫苗
+title: 中共国经济增长率降至零
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046758/)
+`topnews` [轉載自GNews](https://gnews.org/zh-hans/2046960/)
 
-撰稿：东京樱花团/asket
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-104.png)[图片来源](https://www.upi.com/Top_News/World-News/2022/02/21/fourth-covid-19-vaccine-shot-over-75-vulnerable/9031645469430/)
-2月21日合众国际社报道，一个独立的英国免疫咨询委员会周一宣布，将在春季为75岁及以上的人注射第四针COVID-19疫苗。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture1-18.png)
 
-疫苗接种和免疫联合委员会（JCVI），在一份声明中建议为“最脆弱”的人提供额外的春季加强剂量，包括75岁及以上的人、老年护理院居民和12岁及以上的免疫力低下的人。这将是英国老年人获得的第四个COVID-19疫苗剂量，也是向免疫系统严重受损的人提供的第五个疫苗注射。
+图片来自原文
 
-在宣布这一消息的同一天，英国首相鲍里斯-约翰逊在一项新计划中提出取消COVID-19的限制，理由是自1月4日的273,526个新病例的高峰以来，每天的病例数较少。
+中共对外宣称，其国内生产总值在2021年第四季度放缓至4%。中共政府告诉全国人民，它将稳定经济，通胀压力正在缓解。
 
-根据约翰逊的计划，接触者追踪将结束；对COVID-19检测呈阳性的人进行自我隔离的法律要求将于周四结束，尽管人们仍被建议进行自我隔离。
+问题是中共国是否真的以4%的速度增长呢？请相信我们，答案显然是否定的，它最好的增长率是0%。我们评估的数据及观点，如下：
 
-英国的这个做法让人啼笑皆非，一方面首相宣布撤销对疫情的限制，另一方面，又推打第四和第五针中共病毒疫苗，对象还是老年人和免疫系统弱的人！这不是相当于直接送他们去见上帝吗？
+**首先，中共政府向来谎话连篇****，扭曲事实**
 
-信息来源：
+众所周知，你从中共那里听到的一切，要么是谎言，要么是被大幅操纵的“真相”，甚至连中共内部都不相信统计局公布出来的数据。这并非夸大其词。
 
-[Britain to roll out 4th COVID-19 vaccine shot for people 75 and older](https://www.upi.com/Top_News/World-News/2022/02/21/fourth-covid-19-vaccine-shot-over-75-vulnerable/9031645469430/)
+**其次，中共病毒（****COVID-19****）的死亡人数、军队伤亡人数、人口增长数，等数据都是假的**
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+事实上，中共国因中共病毒致死的死亡率少报了17,000%。它报告了4,646人死亡，而实际上大约有170万人死于中共制造的病毒。
+
+不仅如此，中共还进行了长达一年的公关，说中共政府是如何打败病毒的，而帝国主义的美国仍然在毁灭性的大流行病下挣扎。
+
+**第三，中共在世界银行****“经商便利度”排名****中违规操纵**
+
+而且，中共在世界银行的 “经商便利度 “排名中的操纵行为更让人震惊。
+
+中共国在2018年和2020年的榜单中犯了数据违规行为，以便在榜单中获得更好的排名，并从印度和越南等国家抢走业务。
+
+世界银行应该从在中共国境内消失的商人那里了解到做生意并不那么容易。
+
+更明显的操纵是，当中共国违规被抓时，世界银行却停止了所谓“经商便利度”的排名。很明显，中共国利用在该机构的内部影响力，操纵了整个事件。
+
+**中****共****国的经济处于混乱状态**
+
+你如何理解GDP？粗略的概念是：一个国家或地区在一个固定时间段内进行的经济活动的总和。
+
+中共说，它在上一季度增长了4%。那我们来看看事实吧。
+
+- 中共国是一个以出口为基础的经济体，正处于与印度、澳大利亚、美国和欧盟的贸易战中；
+- 北京在军事国防部队上花费巨资，几乎与所有邻国进行了军事冲突；
+- 中共国的房地产行业已经崩溃了；
+- 港口一直堵塞；
+- 中共国百姓正处于巨大的中共病毒危机中
+
+
+准确地说，中共国经济正处于一场完美风暴之中。这一切都始于中共国主席习近平与美国和澳大利亚的贸易战，这阻碍了中共国的出口行业，也在整个中共国造成了电力危机。
+
+关于国防开支的问题是，无论中共国在这一领域投资多少，都收不回投资成本了。
+
+更巨大的打击是中共国的房地产行业的崩溃。中共国的建筑业已经是个脆弱的泡沫。它曾经推动了相关产业的发展，提高了增长数字。现在，随着恒大和其他许多房地产开发商的倒下，中国的房地产正在走向衰落，并使中共国经济随之崩溃。
+
+其实，中共国一直没能遏制中共病毒。当初武汉170万人死亡。现在，像西安、郑州、天津等省市已面临严格的封锁。当中共国的百姓不受控制地被感染时，中共国不可能增加其经济活动。
+
+由于中共病毒的爆发，中共国的港口也时不时地被堵塞。
+
+综上所述，这正是中共国经济的现况，这也是评估中共国GDP增长为零的原因。
+
+备注：
+
+- 疫苗：是指新冠疫苗
+- 中共病毒：是指新冠病毒Covid-19
+- Covid疫苗本身就是随时爆发的病毒
+- 我们不反疫苗，只针对假疫苗
+- 我们不反科学，只针对反人类
+
+
+新闻来源链接：[https://tfiglobalnews.com/2022/01/17/chinas-economic-growth-rate-tanks-to-zero-per-cent/](https://tfiglobalnews.com/2022/01/17/chinas-economic-growth-rate-tanks-to-zero-per-cent/)
+
+本文作者：Rebecca (一切心皆不可得！)
+上传排版：Hong
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
