--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,27 +1,25 @@
 ---
-title: 欧盟警告 俄罗斯在入侵乌克兰的同时会发动网络攻击
+title: 《历史的今天》2022.02.22
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046754/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2046948/)
 
-撰稿：东京樱花团/百花李香
+作者：映兰轩
+![](https://assets.gnews.org/wp-content/uploads/2022/02/nizhou.png)
+1. 1784年：第一艘与中国进行贸易的美国船只 “中国皇后号 “从纽约起航
+2. 1865年：田纳西州通过了一部废除奴隶制的新宪法
+3. 1941年：纳粹警察突袭阿姆斯特丹，围捕了429名年轻的犹太人，准备将其驱逐到布痕瓦尔德和毛特豪森集中营
+4. 1943年：德国反纳粹主义组织白玫瑰成员汉斯·绍尔和苏菲·绍尔两兄妹被纳粹德国政府送上断头台处死
+5. 1972年：美国第37任总统总统理查德-尼克松在北京会见中国总理周恩来
+6. 1973年：美国和中国同意在北京和华盛顿特区建立联络处
+7. 1997年：苏格兰罗斯林研究所宣布世界上第一个克隆的哺乳动物（来自成人细胞）–多莉羊
+8. 2017年：《自然》杂志宣布发现7颗地球大小的行星围绕Trappist-1号恒星运行 – 提高了外星生命的可能性
+9. 2019年：朝鲜驻西班牙大使馆遭朝鲜抵抗组织“自由朝鲜”的人员入侵，8名使馆职员被打伤，一批存有重要情报讯息的电子产品失窃
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/欧盟警告-俄罗斯在入侵乌克兰的同时会发动网络攻击.png)图片来自本文网站
 
-欧盟（EU）警告，俄罗斯非常有可能在入侵乌克兰的同时发动网络攻击。
+* * *
 
-21日彭博社报道，欧盟的计算机应急小组估计，俄罗斯可能会扰乱欧盟成员国的电子支付和在线服务系统，并破坏关键基础设施。以及很有可能扰乱新闻网络，发动一场旨在促进欧盟成员国公民之间分裂的舆论战。
+*发布：Theodosia*
 
-但彭博社表示，根据其获得的内部文件，俄罗斯不太可能破坏乌克兰的整个互联网网络。
-
-本月13日至15日，一些乌克兰银行和政府网站，包括国防部、外交部和能源部的网站，都受到了网络攻击。对此，美国和乌克兰认为，俄罗斯是幕后黑手，但俄罗斯坚持不是他们所为。
-
-信息源：
-
-[EU「ロシアはウクライナ侵攻と同時に、サイバー攻撃する可能性あり」](https://news.yahoo.co.jp/articles/710cbb29d6ab96a9715b4a5e0857c14e54228c3e#:~:text=EU%E3%80%8C%E3%83%AD%E3%82%B7%E3%82%A2%E3%81%AF%E3%82%A6%E3%82%AF%E3%83)
-
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
