--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,32 +1,30 @@
 ---
-title: 视频&#124;昨天的香港，今天的加拿大
+title: 独裁与垄断是万恶之源
 ---
-`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2046683/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2046936/)
 
-制作：香草山视频部
+撰搞：友情友义
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide1-26.jpg)图片来自网络
+邪恶的体制，在政治上表现为独裁，在经济上表现为垄断。近代，从希特勒到斯大林再到毛泽东，今天，从中共国到北朝鲜再到塔利班，对人民奉行的都是强权统治和残酷压榨的邪恶政策。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/logo-s2.png)
+**         **自前苏联解体，中国宣布改革开放以后，为了打开中国的市场，西方各国给予了中国在政策、金融和技术方面前所未有的帮助。但万万没想到的是，这样做的后果只是让共产党独裁体制的僵尸重新复活，并把共产主义的毒素注入了西方的政治、经济、科技和文化等各个领域，直至用病毒武器把全世界推入了万劫不复的境地。
+
+**          **国际垄断资本的本性是贪婪，为了利益他们会毫不犹豫的打破人性的底线与魔鬼做交易。让人吃惊的是，**CCP**病毒武器的制造技术竟然是由美国人帮助开发和资助的，而就在这人类的生死关头，那些跨国资本控制的媒体，一直在制造假信息，打压传播病毒、疫苗真相的声音。
+
+更有甚者，西方各国政府，不去病毒溯源，而是与垄断资本控制的药企勾结，别有用心的用行政命令、限制自由、强迫失业、冻结银行账户、强迫退学等手段逼迫人民注射毒疫苗，致使半数以上的地球人口生灵涂炭。
+
+**         **每个政客的心里都潜伏着一个魔鬼，就是独裁，毎一个寡头的心里都隐藏着一个妖怪，就是垄断，当民主与法制因某种原因被削弱时，这些妖魔鬼怪就会跳出来作恶。
+
+面对大众反对强制疫苗的抗议运动，欧洲各国政府居然效法**CCP**，调用警察暴力镇压，再现了**2019**香港民众被港府镇压的场景。大媒体本应该是真实、正义代言人,但在垄断资本的控制下，主流媒体对真实的声音封网禁言,打压真相,制造假信息做尽了坏事，成了魔鬼的罪恶帮凶。本应是以治病救人为天职的大药企，也为了巨额的利益而与各国政要合谋，变成了制造杀人疫苗的机器。
+
+**        **垄断资本可以提供维持独裁体制所需的金钱，而独裁政府又可以保护寡头的垄断地位，富可敌国的金融巨头们也可以根据需要而推出自己的强权代言人。这一对妖魔因相互需求而缠绕在一起，贪婪的吞噬着人类的生命和全球的财富，只要它们存在一天，世界就永无宁日。
+
+世界大变革在即，让我们放弃幻想，高举新中国联邦的旗帜，紧跟着爆料革命的发起人郭文贵先生，大声唤醒世界人民，从地球上彻底铲除邪恶的独裁和垄断，让人类社会得以正常的生存和发展。
 
 
 
-盖特2月21日消息，郭文贵先生早在2020年，对全世界所发出的警告，现在正在变成悲惨的现实。而昨天的香港，就是今天的加拿大。
-
-2020年11月7日，郭先生在视频中说，香港有无数年轻人被共产党强奸、轮奸、自杀和被消失，但全世界却在保持沉默。同时，他一再强调，这一切将会在美国发生。
-
-同年5月23日的视频中，郭先生表示，如果全世界不放弃短视利益，并被几个利益集团绑架，而不能下决心消灭中国共产党的话，人类将面临着生存的灾难。全世界都会变成香港，不论是美国还是欧洲。而这一切，正在今天的加拿大发生。
-
-发稿：Yuki jiang
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-2.jpeg)
-
-**更多资讯，更多关注**
-
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
-
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
-
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
-
+编辑：云彩
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
