--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,32 +1,46 @@
 ---
-title: 视频&#124;郭先生揭密习普二人密谈内容
+title: 人民车队向华盛顿挺进 国会大厦将再竖围栏
 ---
-`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2046673/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2046911/)
 
-制作：香草山视频部
+翻译：Lulumi
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/logo-s2.png)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2037.png)由于2021年1月6日国会大厦骚乱后的安全问题，围栏在去年的大部分时间里都一直被保留。
 
+美国警察表示“知道”抗议口罩和疫苗强制令的卡车司机组成的“自由车队”正前往华盛顿特区。
 
+在2021年的大部分时间里包围国会大厦的围栏将在下周重新安装，因为国会准备在3月1日接待乔·拜登总统发表其首次国情咨文。
 
-在2月18日的大直播中，郭文贵先生揭密了习近平与普京的密谈内容，指出他们发动战争的根本目的，是为其个人安全和政治利益服务。
+美国国会大厦警察正在为抗议口罩和疫苗规定的卡车司机做准备，因为“自由车队”在加拿大示威数周并造成重大封锁后，将前往华盛顿特区。
 
-郭先生透露，习近平将中国人一万多亿美元的血汗钱交给普京，换来他们两个多小时的单独密谈。无非就是习近平在怂恿普京，二人同时发动侵略战争，其代价是美国的制裁，把中俄踢出SWIFT系统。但是二人的政治地位会得到空前的巩固，一切政治对手也都会被消灭。如果不发动战争，那么中俄内部的政治斗争，则会让二人丧命。因为一切对外战争，都是内部政治灾难的延续，对中共和俄罗斯来说尤其如此。这两场战争看似政治野心，实则是习近平和普京个人安全和政治安危所需。
+抗议者能够封锁温莎和底特律之间的大使桥边境口岸，因为他们对中共病毒COVID-19有关戴口罩和强制接种疫苗的规定表示厌恶。
 
-郭先生进一步解密说，乌克兰其实是世界政治中的一枚棋子，美国和欧洲正在利用乌克兰人民的生命和安全，来消磨习普二人的意志。他们无论是否发动侵略战争，都无法避免灭亡的命运。
+现在，加利福尼亚人正计划加入一个被称为“人民车队”的美国抗议活动，并在本周前往华盛顿特区。
 
-发稿：Yuki jiang
+这场新的示威活动计划于周三从加利福尼亚州的巴斯托出发，在40号州际公路上进行。这一抗议活动的全国组织者莫琳·斯蒂尔说，她不会透露具体的地点，因为担心会受到报复。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-2.jpeg)
+斯蒂尔告诉Newsmax，预计大约有1000辆卡车开始游行，她预计随着车队向东行驶，会有更多的卡车加入进来。
 
-**更多资讯，更多关注**
+斯蒂尔承认：“加拿大的车队在事情发生时非常有组织。我们的车队，他们有一个月的通知，所以我们担心的是破坏性团体的加入。我们试图只是为反抗议做准备，并为此采取安全防范措施。
 
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+“这是关于我们的权利，以及后代的自由，”车队组织者在Facebook上写道。“这不是关于政党，而更多的是关于一个忘记了自己的位置，不顾我们的开国元勋的指示的政府。”
 
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+据福克斯新闻周日报道，安全官员正在重新竖起国会大厦周围的围栏，准备在拜登发表今年最重要的演讲时，阻止这些抗议活动冲击国家的国会大厦。
 
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2039.png)一个被称为“人民车队“的新卡车司机抗议活动将于周三从加州巴斯托出发，前往华盛顿特区。
 
+在演讲之前，美国一直在放松口罩要求和疫苗接种强制令，而且随着2022年中期选举的到来，民调显示美国人越来越不关心中共病毒威胁，而更担心经济、通货膨胀和税收问题以及教育问题。
+
+至少有四个蓝州已经结束了对学校的口罩规定，白宫谴责了疾病控制和预防中心（CDC）关于室内口罩的指导方针。
+
+素材链接：[dailymail.co.uk][Capitol perimeter fence erected after January 6 riot will be REINSTALLED ahead of Biden’s State of the Union address on March 1 as the truckers’ Freedom Convoy heads for Washington](https://www.dailymail.co.uk/news/article-10533055/Capitol-fence-reinstalled-ahead-Bidens-State-Union-trucker-convoy-heads-DC.html)
+
+* * *
+
+*审核：文乐
+校对：小东
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-6.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
