--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,23 +1,24 @@
 ---
-title: 俄官方支持乌克兰分裂 世界局势骤然紧张
+title: 川普的社交媒体软件今日上线
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046856/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2047032/)
 
-撰稿：东京樱花团/龟龟
-![](https://assets.gnews.org/wp-content/uploads/2022/02/02229.png)
-2月21日，俄罗斯总统普京签署行政命令，承认乌克兰境内莫斯科支持的分裂份子控制的两个地区独立。此举加剧了俄乌紧张局势，西方国家担心这可能导致二战以来欧洲最大的冲突之一。
+翻译：  Evalu
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2-92.jpg)
+图片来源： http://gua.media/
 
-早些时候普京召集安全委员会开会呼吁承认顿涅茨克人民共和国和卢甘斯克人民共和国的主权。他还在电视讲话中还指责美国和北约试图将乌克兰变成一个军事哨所来威胁俄罗斯。乌克兰方面表示俄罗斯支持的分裂份子发动的炮击已经达到近三年来的最高水平。分裂份子则声称乌克兰武装部队对平民区使用了重型武器。
+美联社2月21日报道，与推特相竞争的前总统唐纳德·川普的社交媒体应用软件周一上线，这将与他的支持者们寻求与大科技公司限制言论的政策相对抗，一年前，他的账号被推特，脸书和油管封闭。
 
-对于普京这一行动白宫方面表示拜登已经下令实施新的制裁，内容包括禁止在普京承认的两个分裂地区进行新的投资，贸易和融资等。
+他的真相社会软件可以在苹果软件商店下载，目前仅限于那些事先定购者下载，其他人放在等待区将要等10天。该软件在上线后不久出现技术故障，据报道化了几小时后好转。
 
-另有报道称美方已经在和乌克兰政府讨论一旦俄罗斯入侵乌克兰，就让乌克兰总统泽连斯基离开首都基辅。
+川普希望真相社会将吸引在推特上跟随他的几百万人，他暗示可能会第三次参选，近几个月以来，真相社会的母公司川普媒体技术公司的股价已大幅上涨。根据苹果软件排行榜，真相社会下载排名在周一上午是免费软件的第一名。
 
-莫斯科方面已经在乌克兰边境集结了多大19万军队，美国等警告称入侵将在几天内发生。但普京在当天会议中表示莫斯科的首要任务是确保与北约达成安全保障协议以维持和平。
+川普于去年1月6日国会山骚乱后被顶级社交媒体平台屏蔽，这种屏蔽使人们对大科技公司垄断下的自由言论的产生担忧，国会少数党领袖凯文·麦卡锡说：“被所谓的自由派大科技公司屏蔽后一年，川普回来了。”
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+##### 新闻来源： [Trump’s social media app launches year after Twitter ban](https://apnews.com/article/technology-business-media-social-media-donald-trump-5eff637ad5e77fde3b7cddc8881f950d)
+
+#  
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
