--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,24 +1,16 @@
 ---
-title: 联合国秘书长认为俄罗斯侵犯乌克兰主权
+title: 20220220文贵大直播：金融布瓦吉吉事件会从音乐界开始
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2046814/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2046989/)
 
-翻译：Lulumi
+作者：东京樱花团视频小组
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2030.png)2022年2月1日，联合国秘书长安东尼奥·古特雷斯在美国纽约市的联合国总部向新闻界人士发表讲话。
+校对：东京樱花团视频小组
 
-联合国，2月21日（路透社）–联合国发言人说，联合国秘书长安东尼奥·古特雷斯认为，俄罗斯周一承认乌克兰东部的两个分离地区为独立实体，侵犯了乌克兰的领土完整和主权。
-
-联合国发言人斯特凡·杜加里克在一份声明中说：“根据大会有关决议，联合国仍然完全支持乌克兰在其国际公认边界内的主权、独立和领土完整。”
-
-素材链接：[reuters.com][U.S. slams Russian ‘peacekeepers’ in Ukraine as ‘nonsense’](https://www.reuters.com/world/europe/un-chief-believes-russia-has-violated-ukraines-sovereignty-2022-02-21/)
+编辑发布：东京樱花团视频小组
 
 * * *
-
-*审核：文乐
-校对：小东
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-6.jpeg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
