--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,21 +1,42 @@
 ---
-title: 台湾当局将处罚在冬奥会上穿中共国队服的运动员
+title: 普京承认乌东分离地区独立地位 考验美国的时候到了
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046717/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2046946/)
 
-撰稿：东京樱花团/待命（文晓）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/台湾当局将处罚在冬奥会上穿中共国队服的运动员.png)（图片源自本文链接）
-2月22日时事通信社报道：来自法新社的消息，台湾政府行政院长苏贞昌２１日，谴责北京冬奥会开幕式旗手、女子速滑运动员黄郁婷在互联网上发布的一段身着中共国国家队队服的视频。称其做法“非常不合适”。表示将对该运动员进行调查，并对其做出相应处分。
+**作者:  **青衣
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-72.jpg)
+俄罗斯总统普京宣布承认乌克兰东部两分离地区的“独立地位”，同时还宣布将派遣部队进驻“维和”。美国两党议员对此同声发出谴责，并呼吁迅速对俄做出制裁。然而，软弱的制裁显然扭转不了局势，考验美国的时刻到了。
 
-中共国将与之长期对立的台湾视为其领土的一部分，并明确表示将毫不犹豫地进行军事干预以实现统一。而被称为自由主义的堡垒之台湾，是个民主和自治的岛屿。
+据《美国之音》2月22日报道，俄罗斯总统普京周一（2月21日）签署法令，承认乌克兰东部两个俄语地区——顿涅茨克和卢甘斯克的“独立国家”地位。随后，普京又进一步宣布将派遣俄罗斯军队到上述两个地区进行“维和”行动。
 
-黄郁婷在受到批评后删除了这段录像，后来解释说，这套制服是一位中共国朋友送的礼物，穿上它只是为了表达友谊之情。黄郁婷是代表台湾参加北京冬奥会的四名运动员之一，在接受中共国媒体采访时说：在北京有“家的感觉”，这在冬奥会期间引发了进一步的愤怒。黄郁婷曾在脸书上为自己辩护：“体育就是体育。在体育世界里，没有国籍之分，私下里我们都是好朋友。”但后来注销了账户。
+普京的这一决定迅速加剧了各国对俄罗斯将入侵乌克兰的担忧。此前美国曾表示，俄罗斯一旦承认这两个分离地区的独立地位，即等于“严重违反国际法”。
 
-北京冬奥会谢幕之际，苏行政院长重申正在对黄郁婷的行为进行调查。并告诉记者：国家队的运动员应该维护我们国家的尊严和荣誉。黄郁婷的行为是非常不恰当的，辜负了人民的期望。
+美国国会两党议员对此表示强烈担忧。有议员直言，莫斯科的行动“等同于入侵乌克兰”；还有议员呼吁拜登政府尽速对俄罗斯施加制裁。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+参议院外交关系委员会主席梅嫩德斯（Sen. Bob Menendez, D-NJ）周一发表书面声明，谴责普京的行动是对乌克兰主权的攻击，是公然违反国际法。梅嫩德斯表示，任何俄罗斯军队或代理部队若进入顿巴斯地区，拜登政府和美国的欧洲盟友都必须毫不犹豫地实施重大制裁，让俄罗斯为其不正当的行为付出切实、深远和巨大的代价。
+
+共和党联邦参议员格雷厄姆（Lindsey Graham）和民主党联邦参议员怀特豪斯（ Sheldon Whitehouse）共同率领的一组跨党派国会议员周一也发表联合声明称，美国将和欧洲盟友团结一致对抗俄罗斯的侵略。
+
+在普京周一将他的决定通知法国和德国领导人，并随后签署文件宣布乌克兰顿巴斯的顿涅茨克和卢甘斯克两地不再是乌克兰的一部分后，美国总统拜登于当日发布行政令，禁止美国法人对所谓“顿涅茨克人民共和国”和“卢甘斯克人民共和国”这两处乌克兰地区进行新的投资、贸易和金融往来。这项行政令还将提供对任何被判定在乌克兰的这些地区进行运作的人实施制裁的授权。
+
+不过，美国国会多位共和党人仍对拜登政府的做法表示不满。众议院外交事务委员会和国土安全委员会共和党领袖周一在发表联合声明谴责俄罗斯的同时，也批评拜登政府的制裁措施“力度不足”。
+
+共和党联邦众议员麦考尔（ Michael McCaul）和罗杰斯（ Mike Rogers）在声明中表示， 美国必须立即让俄罗斯为这种公然侵略行为和公然侵犯乌克兰主权与领土完整的行为付出真正的代价。但不幸的是，白宫到目前为止所公布的制裁完全没有效用。象征性的制裁只会让普京更加胆大妄为。
+
+麦考尔和罗杰斯呼吁拜登政府尽速对俄罗斯施加更严厉的制裁，包括永久性终止有争议的从俄罗斯到欧洲横跨波罗的海的“北溪2号”（Norm Stream 2）天然气管道项目。
+
+参议院情报委员会副主席卢比奥参议员（Marco Rubio,）周一也接连在推特上发文，指责俄罗斯“入侵”乌克兰。卢比奥还指出，莫斯科的“维和部队”一旦进入乌克兰，当地紧张局势将立刻急速升高，连带着“全球能源价格也将迅速攀升”。
+
+爆料革命和新中国联邦创始人郭文贵先生近日指出，俄乌局势的走向取决于美国和欧洲的态度是否足够强硬，尤其是美国的态度和决策。如果普京看出拜登政府态度软弱，那他就不仅仅只是拿下乌克兰那么简单，接下来还会进一步拿下欧洲。而与此同时，中共有极大可能会趁机对台湾发起武装攻击。
+
+如果中俄分别对乌克兰和台湾开战，那么世界将陷入战争的灾难，政治格局也将被彻底打破，美国将会失去其全球领导地位。 “白头鹰”会被“双头鹰”咬死吗？考验美国的时候到了。
+
+新闻链接：
+
+[https://www.voachinese.com/a/us-congress-reax-russia-putin-ukraine-20220221/6453362.html?utm\_source=twitter&utm\_medium=social&utm\_campaign=dlvr.it](https://www.voachinese.com/a/us-congress-reax-russia-putin-ukraine-20220221/6453362.html?utm_source=twitter&amp;utm_medium=social&amp;utm_campaign=dlvr.it)
+
+* * *
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
