--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,25 +1,56 @@
 ---
-title: 向中国城管看齐？渥太华市长提议出售从抗议者手中缴获的卡车
+title: 【TopNews】新西兰病例数爆炸式增加时期即将发现“低技能”工人的真正价值
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2046695/)
+`topnews` [轉載自GNews](https://gnews.org/zh-hans/2046945/)
 
-#### 翻译/撰稿：zzballack
+随着疫情持续扩散、病例数爆炸式增加，新西兰将有大量的所谓“低技能”劳动者感染或被迫隔离。
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-103.png)图片来源：加拿大广播公司
-据《布雷特巴特新闻网》（Breitbart News）2月21日报道，渥太华市长吉姆·沃森 (Jim Watson)上周六（2月20日）在接受加拿大广播公司（CBC）采访时，提议出售那些警方在暴力镇压和瓦解自由车队和平抗议行动中扣押的卡车和其它车辆。沃森认为，根据特鲁多政府动用的《紧急状态法》（Emergency Act），此举是渥太华的合法权利。
+NZ Herald商业编辑、专栏作家Damien Venuto发文称《新西兰即将发现“低技能”工人的真正价值》。
+![图片](https://mmbiz.qpic.cn/mmbiz_jpg/KtRNQQrEUGmNU7KYdrWHw12Uw4yz5vwtyJqoxb3RqXFqkhmfricic3F6icwISKzVsg7p8hIHKdqr7zndp2UeOxiaGQ/640?wx_fmt=jpeg&amp;wxfrom=5&amp;wx_lazy=1&amp;wx_co=1)
 
-沃森告诉CBC说：“我们实际上有能力没收这些车辆并出售它们。我也希望看到它们被卖掉，而不是物归原主。”上周末，渥太华的执法部门在暴力镇压抗议活动中拖走了76辆车，逮捕了191人，并对他们提出了391项指控，包括恶作剧和阻挠警察。
+（图片：网页截图）
 
-在特鲁多动用《紧急状态法》之前，警方很难找到愿意在渥太华拖走半挂车（semi-truck）和其他车辆的拖车运营商。但《紧急状态法》实施后，政府可以强迫拖车运营商进行工作，如果他们拒绝，就可能面临罚款或监禁。
 
-特鲁多2月21日声称，尽管渥太华的车队被清除，但他的政府仍然需要紧急权力。“很明显，地方和省级当局需要更多的工具来恢复秩序和确保人民的安全。渥太华的事情似乎解决得很好，但紧急状态并没有结束。”特鲁多此前承诺说，他动用的紧急权力将有“时间限制和地理目标，而且是合理、恰当的。”
 
-加拿大已沦为一个独裁国家，独裁者一旦攫取了更多权力后肯定不会轻易放手。过去这两年的大流行就是最好的证明，各国政府纷纷以紧急状态为借口对百姓实施监控，人们的自由权利被逐步掠夺和侵蚀。除非不懈抗争，否则只能像温水煮青蛙那样，逐步沦为全球主义精英的奴隶。
+随着这种高传播性毒株在新西兰肆虐，这些工人将被迫在家隔离，更糟糕的是，他们的工作无法在家完成。
 
-新闻来源：
+“我们已经得到警告，在疫情爆发的高峰期，可能会有多达35万名新西兰人同时在家隔离。”
 
-[Ottawa Mayor Wants to Sell Trucks Confiscated from Freedom Convoy Protesters](https://www.breitbart.com/politics/2022/02/21/ottawa-mayor-proposes-selling-trucks-confiscated-during-freedom-convoy-protests/)
+文章称，上周的数学模型显示，在疫情持续三到四个月的情况下，预计总共会感染150万人，包括386,400例病例、11,500例住院和460例死亡。
+
+很多行业已经做好准备，譬如奥克兰机场就计划损失四分之一的劳动力，超市公司Foodstuffs预计这一数字将接近30%。葡萄酒行业警告，今年的收成面临巨大挑战。
+
+Venuto写道：
+
+“我们很快就会看到被政客们贬低为‘低技能’的工人们的真正经济价值。”
+
+随着疫情大面积爆发，各行业员工缺勤将对新西兰经济造成严重影响。
+
+新西兰Footprint Connect和Umbrella Wellbeing两家公司本月发布的一份白皮书指出，数据表明，2020年新西兰经济因工人缺勤损失了18.5亿纽币，平均每个工人缺勤4.2天/年。随着Omicron笼罩新西兰全国，可以预计未来几个月新西兰工人生产力的损失将是巨大的。
+
+随着大量的一线工人在未来几周将被感染、因密接在家隔离或需要照顾染病的家人，我们面对的将是空货架、无人配送的包裹以及烂在树枝上的水果。![图片](https://mmbiz.qpic.cn/mmbiz_jpg/KtRNQQrEUGmNU7KYdrWHw12Uw4yz5vwtgwuWnm26VSYboLmMmTibKibqAw01Nk1BTLHU4oJrbuDUtd1OtobhLzXQ/640?wx_fmt=jpeg&amp;wxfrom=5&amp;wx_lazy=1&amp;wx_co=1)
+
+Photo: RNZ / Claire Eastham-Farrelly
+
+很显然，称呼这些工作人员为“低技能”是不合适的。有政界人士和专家呼吁将他们称为“低工资”工人，因为事实就是如此。
+
+在去年的预算前演讲中，总理阿德恩称新西兰移民法即将调整，将使政府“将吸引高技能而不是低技能移民”。
+
+“对于一个用词如此谨慎的政府来说，贬低数十万新西兰人的日常工作是多么轻而易举。”Venuto说。
+
+低薪工作是不一定令人愉快的工作，存在感不强。只有当它突然消失，外界才会注意到。就像空气和水。“这正是未来几个月将会看到的。”
+
+我们即将进行一项实验，看看当这些没有人喜欢做的工作突然消失了，会发生什么。
+
+[援引链接：](https://www.nzherald.co.nz/business/damien-venuto-new-zealand-about-to-find-out-the-real-value-of-low-skilled-workers/WZZ5E55HCKQE6TFL6TOIE2QPR4/)
+
+撰稿/米拉雅
+
+审阅/邱杰斯
+
+上传/天赐良闻
+
+
 
  
 
