--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,44 +1,19 @@
 ---
-title: 前职业足球运动员接种中共病毒疫苗加强剂5天后死亡
+title: 中共《社会保险基金行政监督办法》发布
 ---
-`topnews` [轉載自GNews](https://gnews.org/zh-hans/2046666/)
+`儒为` [轉載自GNews](https://gnews.org/zh-hans/2046910/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture1-16.png)
+作者：意大利罗马达芬奇农场-儒为
+![](https://assets.gnews.org/wp-content/uploads/2022/02/保险运动.jpeg)封面来源：网络图片
+中共打着“为提升监督效力、更好保障基金安全”的名义，中共人力资源和社会保障部2022年2月22日发布《社会保险基金行政监督办法》，自3月18日起施行。人社部表示，下一步，将指导各地抓好办法的贯彻落实，强化监督查处，以零容忍态度严厉打击欺诈骗保、套保或挪用贪占社保基金的违法行为；同时开展全险种社保基金专项检查，发现一起、查处一起，努力守护好社保基金安全。
 
-图片来自原文
+七哥在直播中说，中共国银行就是谋你钱的机器，中共国保险公司就是害你命的机器。中共盗国贼集团把银行里和保险公司里数以万亿计的财富以各种我们无法想象的方式搬到海外藏起来，中共国盗国贼集团再以各种理由和借口宣传各种亏空和各种腐败来替自己找替罪羊，抓一批、杀一批，最后不了了之。各种问题和矛盾积累到一起到了无法解决的程度，那么中共就发动一场运动或者一场战争来解决这一切问题。中共是这样，世界也是这样。
 
-前马来西亚足球运动员塞尔贝格斯·辛格（Serbegeth Singh），昵称谢比·辛格（Shebby Singh），于1月12日星期三在外出骑车时因心脏病发作而突然死亡。
+中共《社会保险基金行政监督办法》发布，说明中共就是要通过这场“保险运动”尽快对即将崩塌的金融行业进行独裁管制，之后再亲自把这个巨大的金融泡沫戳破，把该抢回来的财富抢回来、把该甩的锅甩出去，最后再给能在病毒和疫苗灾难中活下来的老百姓一点甜头，这样中共就认为可以再继续活下去了。中共国保险业是巨大的金融泡沫最重要的那张多米诺骨牌，中共自曝保险业也仅是中共国经济崩塌的开始。
 
-近年来一直担任足球评论员的谢比，在五天前（1月7日）刚接种了中共病毒（COVID-19）疫苗加强剂。
+新闻来源：🔗[权威快报｜打击骗保套保!《社会保险基金行政监督办法》发布](http://www.news.cn/politics/2022-02/22/c_1128405113.htm)
 
-谢比的儿子索努尔吉特·辛格（Sonuljit Singh）告诉《今日自由马来西亚》，他的父亲在1月7日打了加强剂，五天后就离开了我们，大家都知道。我们不知道他打了什么牌子的加强剂，因为MySejahtera应用程序[马来西亚的中共病毒（COVID）二维码应用程序]还没有更新。
-
-但医生告诉我们，他的死因99%与心脏病有关，因为他的验尸报告显示，他的三条冠状动脉有堵塞现象。他的所有重要器官都处于完美的工作状态，也没有任何过敏反应的迹象。
-
-谢比的突然去世甚至引起了马来西亚国王和王后的回应，国王和王后非常感谢他对国家的服务和牺牲。他的去世是马来西亚足球的一大损失。
-
-谢比在他的足球生涯中担任后卫，并代表马来西亚国家队出场61次，在1989年东南亚运动会上赢得一枚金牌。
-
-退役后，他继续从事这项运动，在亚洲担任教练和体育广播员。他还担任过马来西亚超级联赛俱乐部马六甲TMFC的技术顾问，后来又成为英国足球俱乐部布莱克本流浪者队的全球顾问。
-
-谢比在马来西亚广受欢迎，作为一名专家和广播员，他以对足球运动的热情和激情而闻名，每当他提出直言不讳的观点时，成千上万的观众都会紧盯着屏幕。
-
-他于周五火化，留下了他的妻子哈班斯·考尔和两个孩子，纳塔莎·考尔(Natassha Kaur)和索努尔吉特-辛格(Sonuljit Singh)。
-
-备注：
-
-- 疫苗：是指新冠疫苗
-- 中共病毒：是指新冠病毒Covid-19
-- Covid疫苗本身就是随时爆发的病毒
-- 我们不反疫苗，只针对假疫苗
-- 我们不反科学，只针对反人类
-
-
-新闻来源链接：[https://thecovidworld.com/serbegeth-singh-former-pro-football-player-dies-5-days-after-receiving-covid-19-booster-shot/](https://thecovidworld.com/serbegeth-singh-former-pro-football-player-dies-5-days-after-receiving-covid-19-booster-shot/)
-
-本文作者：Rebecca (一切心皆不可得！)
-
-上传排版：Hong
+*编辑/校对/发稿：意大利罗马达芬奇农场-儒为*
 
  
 
