--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,29 +1,64 @@
 ---
-title: 秘翻在线：通过北京冬奥，中共及其帮凶的问题已成秃头上的虱子
+title: 普京承认乌克兰分裂地区后俄罗斯面临新制裁
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2046664/)
+`Shuizhuyu` [轉載自GNews](https://gnews.org/zh-hans/2046905/)
 
-撰稿：待命（文暁）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-29.png)（图片源自本文链接）
-2月22日京都新闻对北京奥运发表评论文章：北京冬奥会在经过17天的赛事后已经落下帷幕。尽管竞争激烈，但其特点是东道国中共国的强制管理，将其国家威望置于危险之中。
+翻译/整理： 意大利罗马达芬奇农场  Shuizhuyu
 
-中共当局试图通过限制运动员的言行以及记者的报道来遏制国内人权问题。这是一次异常 “受控 “的奥运会，利用防控中共病毒(新冠病毒)的泡沫管制法，令运动员和新闻界无法走上街头。美欧等国进行了外交抵制，北京奥运也自我展示了其与《奥林匹克宪章》中提倡的 “和平盛典 “相差甚远。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/HACIPNF4YNL5DHXAV2WQPGE5WA.jpg)
 
-这是一次奥运与政治的关系备受质疑的奥运会，给未来的奥运会留下了有关运行方式的课题。最具象征意义的当属中共事先给运动员们的 “警告”。
 
-北京奥运会之前，中共当局曾强调，任何违反中共国法律的行为都将受到惩罚。因此，很少有运动员对被歧视的问题提出抗议。自去年夏天的东京奥运会以来，已经得到缓和的，针对歧视的抗议行为又见回潮。运动员们在北京奥运期间闭口不谈，但回国后开始批评中共国的人权问题。
+资料来源：路透社
 
-在国际奥林匹克委员会（IOC）的例行新闻发布会上，一个关于新疆和台湾的问题被一位中共国发言人打断。在中共国，人权活动家和律师正在受到监视和拘留。因此，即使通过举办奥运会，中共国也未能扭转其压制人权的国际形象。
+在总统弗拉基米尔·普京承认乌克兰东部的两个分离地区之后，美国及其欧洲盟友将于周二宣布对俄罗斯实施新的制裁，这加深了西方对欧洲新战争的担忧。
 
-另一个不容忽视的是国际奥委会对中共国的态度。巴赫多次与曾声称自己被中共一位前副总理胁迫发生性关系，并一度消失的网球运动员彭帅一起观看比赛。他似乎在帮助中共国平息 “彭帅事件 “。
+乌克兰军方表示，由于违反停火协议的行为增加，过去 24 小时内，东部地区的亲俄分裂分子在炮击中造成 2 名士兵死亡和 12 人受伤，这是今年伤亡人数最多的一次。
 
-国际奥委会还默许了中共对俄罗斯总统普京的特别邀请，而普京作为总统的俄罗斯，是因兴奋剂问题剂受到惩罚，不可以以国家名义参赛的国家，其官员应该被禁止参加北京奥运会。
+普京周一的声明，并签署了一项关于向两个分离地区部署俄罗斯军队的法令，引起了国际社会的谴责和美国的立即制裁，总统乔·拜登签署了一项行政命令，以停止美国在分离地区的商业活动。
 
-过度强调主办国政府之便利的国际奥委会，在去年夏天的东京奥运会上也受到了批评。其对实现奥林匹克理念的责任含糊不清的姿态，降低了国际奥委会在国际社会的信誉。应该由国际奥委会和东道国来找到解决本届奥运会出现的问题之办法，并使其在下届奥运会上发挥作用。
+周二，对战争的担忧升温将油价推至七年高位，而包括日元在内的避险货币上涨，全球股市暴跌。
 
-笔者所感，尽管中共当局极力掩盖其非人道无人权等等问题，但网络时代，已挡不住国际社会的眼睛和舆论。京都新闻针对北京奥运这篇深刻的评论文章说明，中共及其帮凶们的问题已成了秃头上的虱子。
+周一晚些时候，美国驻联合国大使琳达·托马斯-格林菲尔德在安理会紧急会议后对记者说：“美国将对俄罗斯实施制裁，这是明显违反国际法和乌克兰主权和领土完整的行为。我们能够、将要并且必须团结一致，呼吁俄罗斯撤军，重返外交谈判桌，为和平而努力。”
 
-信息源：[社説：北京五輪閉幕　政治との距離問い直せ（京都新聞） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/ec8e3b6eefcb18df081ba52eee18dc00f104b530)
+但一位美国高级官员表示，俄罗斯军队部署到分离地区并不值得美国及其盟国为全面入侵而准备的最严厉制裁，因为俄罗斯已经在那里部署了军队。
+
+一位英国政府高级部长表示，很明显普京选择了对抗而不是对话，英国将以制裁作为回应。
+
+现在的情况与 1962 年古巴导弹危机一样严重，当时美国和苏联之间的对抗将世界推向了核战争的边缘。
+
+俄罗斯否认计划袭击其邻国，但它已在乌克兰边境集结军队，并威胁要采取“军事技术”行动，除非它得到全面的安全保证，包括乌克兰永远不会加入北约。
+
+据塔斯社报道，俄罗斯外交部发言人玛丽亚·扎哈罗娃（Maria Zakharova）表示，对这两个地区的承认并未影响俄罗斯准备与美国进行会谈的准备。
+
+英国表示已制定制裁措施，针对那些参与侵犯乌克兰领土完整的人，这些措施将于周二生效。
+
+一名欧盟外交官分别表示，会议将考虑如何就欧盟领导人周一发表的声明采取行动，该声明称欧盟将“对参与这一非法行为的人实施制裁”。
+
+中国表示对局势恶化感到担忧，并呼吁各方保持克制，而日本则表示，如果发生全面入侵，它准备加入对莫斯科的国际制裁。
+
+俄罗斯驻联合国大使瓦西里·内边齐亚警告西方大国要“三思而后行”，不要让局势恶化。
+
+路透社的一名目击者看到坦克和其他军事装备穿过分离主义控制的顿涅茨克市。车辆上看不到任何标志。
+
+乌克兰军方在其 Facebook 页面上表示，它记录了 84 起分离主义分子的炮击事件，据称这些分离主义分子违反停火协议，用重炮向前线的约 40 个定居点开火。
+
+国际文传电讯社援引一名分离主义官员的话说，乌克兰破坏分子在一条道路上引爆了一枚地雷，造成三名平民死亡。
+
+俄罗斯支持的乌克兰顿涅茨克和卢甘斯克地区（统称为顿巴斯）的分离主义分子于 2014 年脱离了乌克兰政府的控制，并宣布自己为独立的“人民共和国”。
+
+RIA 通讯社援引外交部的报道称，俄罗斯需要先批准与这些地区的友好条约，然后才能讨论这些地区的确切边界等问题。预计俄罗斯议会将于周二审查友好条约。
+
+周一，在充满对西方不满的冗长电视讲话中，明显愤怒的普京表示，乌克兰东部是古老的俄罗斯土地。普京对奥斯曼帝国的历史进行了深入研究，并对俄罗斯要求改写欧洲安全安排的要求一再遭到拒绝表示失望。
+
+普京说：“我认为有必要做出早就应该做出的决定，立即承认顿涅茨克人民共和国和卢甘斯克人民共和国的独立和主权。”
+
+普京多年来一直致力于恢复俄罗斯对苏联解体后出现的国家的影响力，乌克兰在他的野心中占有重要地位。 2014年俄罗斯从乌克兰吞并克里米亚，西方国家对俄罗斯实施制裁。
+
+普京讲话时，卢布扩大了跌幅，一度跌破每美元 80。
+
+🔗[普京承认乌克兰分裂地区后俄罗斯面临新制裁](https://www.reuters.com/markets/stocks/russia-facing-new-sanctions-after-putin-recognises-breakaway-regions-2022-02-22/)
+
+责任编辑/发布： Shuizhuyu
 
  
 
