--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,55 +1,30 @@
 ---
-title: 伊说│为疯掉的“铁链女”们点一盏灯
+title: 秘翻在线：绑架中共国人抽血和器官买卖…惊现血奴
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046895/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2047080/)
 
-撰稿：东京樱花团/华夏伊人
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2035.png)
-2022年新年伊始，网络上开始热议疯传丰县8孩妈铁链女事件。在震惊、愤怒、同情之余，更想知道铁链女到底是谁？她从哪里来？她为什么被锁？她的牙齿为什么被拔掉？她为什么会疯掉？为什么？为什么？为什么？……
+撰稿：潜水的鲸
+![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-30.png)图片来源：原文链接
+先驱经济金有珍记者报道：因为连续发生以高工资为诱饵，诱骗中共国人到柬埔寨摘除脏器的案例，中共当局发布了柬埔寨就业警告。
 
-带着一系列的疑问，尝试着去寻找答案，不看不知道，一看吓一跳。
+据《观察者网》等中共媒体18日报道，被柬埔寨网络诈骗团伙绑架，在囚禁状态下被抽血的中共国男子李某（31岁）逃出，目前正在当地医院接受治疗。
 
-《中国走失人口白皮书（2020）》显示，全年走失达100万人次。每天约2793人走失，这意味着每分钟就有2人在人海中消失。这个数据震惊了许多人，更令人惊恐的是，2019年为177万人，2018年为199万人，2017年为260万人，2016年为394万人。
+李某去年6月经朋友介绍说可以保障高工资后前往广西，喝了不明身份的人递来的饮料后昏迷不醒，经由越南被绑架到了柬埔寨的西哈努克维尔。
 
-翻看江苏的地方志：
+之后，绑架组织要求李某参与网络诈骗，因李某拒绝，绑架组织监禁了李某，并从去年8月开始对他进行了7次抽血，每次抽1500毫升血液贩卖。他趁监视疏忽之际奇迹逃脱。
 
-1989年，解救被拐妇女800多人，全国妇联称赞徐州积极保护妇女权益；
+李某证实说:诈骗团伙威胁他，说要把他的器官也摘除售卖，曾在一起的一名中共国人被抽血、脏器被摘除后第二天就消失了。
 
-1992年，解救被拐妇女1200多人，全国人大内务司法委员会称赞徐州为制定《妇女权益保护法》积累了经验；
+中共国最近接连发生了多起像李某一样因找工作而在柬埔寨被害的事件。 20多岁的中共国女性王某也于2020年12月前往柬埔寨后失踪。
 
-2000年，解救被拐妇女12000多人、儿童5400多人，公安部称赞徐州打拐成果位居全国第一。
+王某的母亲在上个月13日和女儿失去联系，14日收到了”你女儿被绑架了，汇20万元人民币”的微信短信。和王某同行的中国工人2名失踪后被发现已死亡，但王某至今下落不明。
 
-江苏省地方新闻报道，1986年至1988年上半年拐卖妇女人数：钢山县12000人、睢宁县8700人、邳县9400人、沛县5300人、新沂4600人。
+信息来源：[http://news.heraldcorp.com/view.php?ud=20220218000546](http://news.heraldcorp.com/view.php?ud=20220218000546)
 
-仅仅查找了有限的历史新闻资料，便被充满血和泪的数字震惊了。什么样的土壤，催生并纵容这种光天化日、明火执仗、经年累月的邪恶，又是什么样的人让贩卖人口的罪恶竟然发展到如此猖狂的地步，有良知的人们愤怒了。
+评：如果中共国能保证基本的民生和就业问题，没有人愿意背井离乡去找所谓高工资的工作。该事件暴露了中共国的国民生存状态之艰难。
 
-以此同时，1988年一篇关于拐卖妇女的报告文学再次走进大众的视野，妇女被拐卖的黑色漩涡持续了整整34年：
+责编：待命（文晓）
 
-【1987年9月中旬，铜山县伊庄乡牛楼村7名人贩子在自家门前，公然将拐卖来的12名妇女公开拍卖。
-
-12名只穿着裤头和背心的女人，瑟瑟发抖地站在几乎全村男男女女老老少少的前面，身上标着价格。
-
-她们有的在抽泣；有的用双手竭力遮盖住让女人羞愧的部位，摆脱那些贪婪淫邪的目光；也有的瞪着惊恐的眼睛，望着手拿铁链的人贩子，眼里流露出期盼人性同情的目光。
-
-在那块没有文明的蛮荒之地，一次次地拍卖妇女的场景，刺激的人们热血沸腾，有了女人，就会人丁兴旺。为了买女人，有的倾家荡产，借债累累。因此，当用几乎榨干了他们血汗的钱，买来属于自己的女人后，所要做的第一件事就是尽情蹂躏手中的女人。
-
-这些妇女不仅失去了人身自由，也失去了做人的尊严，过着非人的生活。买她们的目的就是繁衍后代。始终受到整个家族的所有人的监视，为了防止逃跑用铁链捆绑起来。】
-
-看到这些，你还会觉得丰县铁链女8孩妈的遭遇是一个孤立的悲剧吗？这或许只是冰山一角，现代文明离他们太遥远，贫穷使这些农民的心灵极度扭曲变态。贫穷和野蛮历来就是一对孪生兄弟，当愚昧和金钱为伍时，就会让他们无所不能。贫穷更使这里的男人满足不了人类生存最原始最低级的要求：得到一个属于自己的女人。可谁能赏赐一个女人给他们呢？为了传宗接代，为了给祖祖辈辈埋葬在这片土地的先人一个交代，他们要为自己寻找一个属于这片土地的女人。于是，制造了一个又一个灭绝人性的人间悲剧，世道人心就这样被逼疯了。
-
-逆天心，悖人伦的贩卖妇女行为在历朝历代都是重罪极刑，而在中共国，买卖一个妇女最高判3年以下有期徒刑、拘役或管制，同种数罪不并罚，也就是说，买卖一个或买卖多个受到的惩罚是一样的。更可悲的是买卖一个妇女的罪刑等同于买卖20只癞蛤蟆。
-
-天地之性，人为贵。在中共国的统治下，人如草芥，命如蝼蚁。百姓的生死与它无关，它只关乎如何让政权更加稳固，如何奴役百姓，如何敲骨吸髓压榨百姓。知道了这些，你就不会对徐州丰县人民法院判决的被拐卖妇女起诉的离婚案，均不予支持离婚的行为感到吃惊；你也不会为丰县的两次通告和徐州调查组的两次通报感到愤怒。因为从丰县到徐州的反应就是今日中共国的真实写照：说着不能自圆其说的谎话，做着自扇耳光愚蠢的事，一次又一次搬起石头砸自己的脚。
-
-看着铁链女那纤细的手指，接过馒头捏起一小块，然后优雅放入口中的动作，我真的不相信她是来自于云南深山里的少数民族妇女。当她说出这个世界不要我了的时候，让多少人泪奔，这不仅仅是同情和愤怒，更多的是恐惧。在中共国还有多少不为人知，甚至已经被消亡的“铁链女”。没有人可以岁月静好，被拐卖无差别的威胁着每一位儿童和妇女，也威胁着每一个家庭。你、你的姐妹、你的女儿和铁链女之间也许就是一闷棍的距离。
-
-丰县铁链女系列事件发生在二十一世纪的今天，是人类的奇耻大辱。人口买卖和虐待妇女是整个民族道德和文明水平的集体坍塌。种种现象的发生，感觉回到了黑暗的中世纪，难道在黑夜匍匐前行太久，就失去了对光明的渴望吗？我们呼唤人性的回归，呼唤道德的回归，呼唤法律的回归。
-
-在寻求答案的无果的情况下，请点一盏灯照亮前方。一灯能除千年暗，一智能灭万年愚。尽管黑夜漫长，总有人在舍命燃灯，做个点灯人，让你、你的姐妹、你的女儿不再是下一个饱受蹂躏，身心俱伤，甚至被逼疯的人。大道不孤，与君同行。
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
