--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,32 +1,55 @@
 ---
-title: 视频&#124;中共国音乐界将发生金融阿比比事件
+title: 伊说│为疯掉的“铁链女”们点一盏灯
 ---
-`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2046633/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046895/)
 
-制作：香草山视频部
+撰稿：东京樱花团/华夏伊人
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2035.png)
+2022年新年伊始，网络上开始热议疯传丰县8孩妈铁链女事件。在震惊、愤怒、同情之余，更想知道铁链女到底是谁？她从哪里来？她为什么被锁？她的牙齿为什么被拔掉？她为什么会疯掉？为什么？为什么？为什么？……
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/logo-s2.png)
+带着一系列的疑问，尝试着去寻找答案，不看不知道，一看吓一跳。
 
+《中国走失人口白皮书（2020）》显示，全年走失达100万人次。每天约2793人走失，这意味着每分钟就有2人在人海中消失。这个数据震惊了许多人，更令人惊恐的是，2019年为177万人，2018年为199万人，2017年为260万人，2016年为394万人。
 
+翻看江苏的地方志：
 
-2月20日，郭文贵先生在大直播节目中爆料，中共国内的音乐界、娱乐界即将发生颠覆性的大事，而中共国的金融、房地产将会开启新一轮的恶化和崩塌。
+1989年，解救被拐妇女800多人，全国妇联称赞徐州积极保护妇女权益；
 
-郭先生表示，中共实际第二号政治人物彭丽媛的精神状况非常不好，原因是演艺界、音乐界在冬奥会后将会发生颠覆性质的剧变。此前，为了营造出“国泰民安”的冬奥氛围，中共是严禁本国的房地产业在此期间出现破产现象，而被中共一贯用于洗黑钱的娱乐界、歌星、明星们，他们背后链接的一系列经济丑闻也不容许在这一时期被媒体曝光。而目前，中共的经济崩塌已到了纸包不住火的程度。
+1992年，解救被拐妇女1200多人，全国人大内务司法委员会称赞徐州为制定《妇女权益保护法》积累了经验；
 
-同时，郭先生向世界预警，中共国将会迎来一场金融阿比比事件，届时，中共的房地产业会开启一个新的恶之轮回。而这次的金融阿比比事件，将从中共的音乐界开始。
+2000年，解救被拐妇女12000多人、儿童5400多人，公安部称赞徐州打拐成果位居全国第一。
 
-发稿：Yuki jiang
+江苏省地方新闻报道，1986年至1988年上半年拐卖妇女人数：钢山县12000人、睢宁县8700人、邳县9400人、沛县5300人、新沂4600人。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-2.jpeg)
+仅仅查找了有限的历史新闻资料，便被充满血和泪的数字震惊了。什么样的土壤，催生并纵容这种光天化日、明火执仗、经年累月的邪恶，又是什么样的人让贩卖人口的罪恶竟然发展到如此猖狂的地步，有良知的人们愤怒了。
 
-**更多资讯，更多关注**
+以此同时，1988年一篇关于拐卖妇女的报告文学再次走进大众的视野，妇女被拐卖的黑色漩涡持续了整整34年：
 
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+【1987年9月中旬，铜山县伊庄乡牛楼村7名人贩子在自家门前，公然将拐卖来的12名妇女公开拍卖。
 
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+12名只穿着裤头和背心的女人，瑟瑟发抖地站在几乎全村男男女女老老少少的前面，身上标着价格。
 
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
+她们有的在抽泣；有的用双手竭力遮盖住让女人羞愧的部位，摆脱那些贪婪淫邪的目光；也有的瞪着惊恐的眼睛，望着手拿铁链的人贩子，眼里流露出期盼人性同情的目光。
 
+在那块没有文明的蛮荒之地，一次次地拍卖妇女的场景，刺激的人们热血沸腾，有了女人，就会人丁兴旺。为了买女人，有的倾家荡产，借债累累。因此，当用几乎榨干了他们血汗的钱，买来属于自己的女人后，所要做的第一件事就是尽情蹂躏手中的女人。
+
+这些妇女不仅失去了人身自由，也失去了做人的尊严，过着非人的生活。买她们的目的就是繁衍后代。始终受到整个家族的所有人的监视，为了防止逃跑用铁链捆绑起来。】
+
+看到这些，你还会觉得丰县铁链女8孩妈的遭遇是一个孤立的悲剧吗？这或许只是冰山一角，现代文明离他们太遥远，贫穷使这些农民的心灵极度扭曲变态。贫穷和野蛮历来就是一对孪生兄弟，当愚昧和金钱为伍时，就会让他们无所不能。贫穷更使这里的男人满足不了人类生存最原始最低级的要求：得到一个属于自己的女人。可谁能赏赐一个女人给他们呢？为了传宗接代，为了给祖祖辈辈埋葬在这片土地的先人一个交代，他们要为自己寻找一个属于这片土地的女人。于是，制造了一个又一个灭绝人性的人间悲剧，世道人心就这样被逼疯了。
+
+逆天心，悖人伦的贩卖妇女行为在历朝历代都是重罪极刑，而在中共国，买卖一个妇女最高判3年以下有期徒刑、拘役或管制，同种数罪不并罚，也就是说，买卖一个或买卖多个受到的惩罚是一样的。更可悲的是买卖一个妇女的罪刑等同于买卖20只癞蛤蟆。
+
+天地之性，人为贵。在中共国的统治下，人如草芥，命如蝼蚁。百姓的生死与它无关，它只关乎如何让政权更加稳固，如何奴役百姓，如何敲骨吸髓压榨百姓。知道了这些，你就不会对徐州丰县人民法院判决的被拐卖妇女起诉的离婚案，均不予支持离婚的行为感到吃惊；你也不会为丰县的两次通告和徐州调查组的两次通报感到愤怒。因为从丰县到徐州的反应就是今日中共国的真实写照：说着不能自圆其说的谎话，做着自扇耳光愚蠢的事，一次又一次搬起石头砸自己的脚。
+
+看着铁链女那纤细的手指，接过馒头捏起一小块，然后优雅放入口中的动作，我真的不相信她是来自于云南深山里的少数民族妇女。当她说出这个世界不要我了的时候，让多少人泪奔，这不仅仅是同情和愤怒，更多的是恐惧。在中共国还有多少不为人知，甚至已经被消亡的“铁链女”。没有人可以岁月静好，被拐卖无差别的威胁着每一位儿童和妇女，也威胁着每一个家庭。你、你的姐妹、你的女儿和铁链女之间也许就是一闷棍的距离。
+
+丰县铁链女系列事件发生在二十一世纪的今天，是人类的奇耻大辱。人口买卖和虐待妇女是整个民族道德和文明水平的集体坍塌。种种现象的发生，感觉回到了黑暗的中世纪，难道在黑夜匍匐前行太久，就失去了对光明的渴望吗？我们呼唤人性的回归，呼唤道德的回归，呼唤法律的回归。
+
+在寻求答案的无果的情况下，请点一盏灯照亮前方。一灯能除千年暗，一智能灭万年愚。尽管黑夜漫长，总有人在舍命燃灯，做个点灯人，让你、你的姐妹、你的女儿不再是下一个饱受蹂躏，身心俱伤，甚至被逼疯的人。大道不孤，与君同行。
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
