--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,35 +1,35 @@
 ---
-title: 俄罗斯财政部推出数字货币法案，无视央行的反对意见
+title: 首位美国女性军官上诉成功，获疫苗宗教豁免
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2046620/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2046887/)
 
-#### 翻译/编辑：小红帽
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/7def7a23-8979-40e2-a349-f0299951ccc5.jpg)图片来源： cointelegraph.com
+整理/编辑：小鱼儿
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/13-16.png)图片来源：Yahoo Finance
 
 
-根据Cointelegraph 2月22日报道，**俄罗斯财政部在与俄罗斯中央银行（CBR）漫长的对决中提高了赌注，正式提出一项法案，建议对数字资产进行监管，而不是禁止数字资产。**
+当地时间 2 月 21 日，，据[自然新闻](https://www.naturalnews.com/)（Natural news）报道，佐治亚州的美国地方法官，蒂尔曼·E·塞尔夫三世（Tillman E. Self III）裁定，美国一名女性军官获疫苗宗教豁免；空军部违反了，该军官的第一修正案的权利。法官为女性军官开了绿灯，以保护她的免疫系统免受新冠疫苗破坏。
 
-周一，俄罗斯财政部向政府提交了一份“关于数字货币”的联邦法律草案。这一阶段的立法程序先于法案提交议会审议。
+去年，该军官申请一项基于宗教的疫苗豁免，结果却立即被（空军）内部审查程序拒绝，她随后提出上诉。
 
-该机构将“数字货币合法市场的形成，以及确定其流通规则和参与者范围”作为这一举措的理由。该法案的作者强调，该法案并不寻求赋予数字货币以法定货币地位，而是将加密货币定义为一种投资工具。
+该军官在诉讼中称，由于她的基督教信仰，禁止谋杀未出生的婴儿，她不能接种冠状疫苗。疫苗含有来自流产的胎儿组织的成分，这是一种“严重的邪恶”
 
-该法案为促进数字资产流通的平台提出了许可制度，并规定了此类运营商应遵守的审慎、风险管理、数据隐私和报告要求。**合法购买和销售加密货币只能通过银行账户进行，并建议加密货币平台和银行都引入了解你的客户程序（KYC）。**
+法官塞尔夫写道，“当空军至少有 3,300 名未接种疫苗的服役人员仍在执勤时，（空军）认为原告基于宗教拒绝接种疫苗，将‘严重阻碍’军事职能，这似乎是不合逻辑的，更不用说争论了。”
 
-该立法还要求数字资产运营商告知零售客户与加密货币交易相关的风险。个人必须通过一项测试，评估他们对加密投资行为和风险意识的了解。通过测试的人将受到每年60万卢布（约合7900美元）的投资限额；未通过测试的人每年最多只能投资5万卢布（650美元）。企业和合格投资者将不受年度限额的限制。
+他进一步写道：“法院很容易发现，空军保护宗教权利的程序，既虚幻又不真诚。”
 
-此外，**该法案引入了加密采矿的正式定义，并指定了加密市场参与者可以向税务机关报告其活动的机制。**
+根据内部军事数据，到目前为止，空军已经拒绝了 3,665 个基于宗教的请求，并且仍在考虑其他 3,2888 个请求。
 
-财政部的法案是在俄罗斯银行将自己的数字资产框架提交给财政部审查的几天后发布的。俄罗斯中央银行的立场保持不变：发行数字资产并促进其流通被视为非法，而银行和其他金融机构不应该允许持有或交易加密货币。最新草案中还包含的一项新条款–提议取缔加密货币广告。
+空军发言人安·斯特凡内克称，“空军部将遵守法院的命令，直到问题得到法律解决。”
 
-财政部和中央银行预计，未能在周五之前调和他们的立场，反而产生了两项相互矛盾的立法。财政部的新闻稿讽刺地提到，中央银行的提议“将在法案制定的后期考虑，只要它们不与财政部的做法相抵触。”
+参考新闻：[VICTORY: Female Air Force officer becomes first to win injunction against covid jab mandate](https://www.naturalnews.com/2022-02-21-military-officer-wins-injuction-covid-jab-mandate.html)
 
-新闻链接：[Russia’s Finance Ministry introduces digital currency bill, brushes off central bank’s objections](https://cointelegraph.com/news/russia-s-finance-ministry-introduces-digital-currency-bill-brushes-off-central-bank-s-objections)
+发布：tianzhihuan
 
-发布:Frank2021
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+更多资讯，请关注：**
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
 [澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
