--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,24 +1,23 @@
 ---
-title: 郭文贵盖特音频2022.02.21
+title: 俄官方支持乌克兰分裂 世界局势骤然紧张
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2046602/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046856/)
 
-音频提供者：左媛
-![](https://assets.gnews.org/wp-content/uploads/2022/02/out-18.jpg)
+撰稿：东京樱花团/龟龟
+![](https://assets.gnews.org/wp-content/uploads/2022/02/02229.png)
+2月21日，俄罗斯总统普京签署行政命令，承认乌克兰境内莫斯科支持的分裂份子控制的两个地区独立。此举加剧了俄乌紧张局势，西方国家担心这可能导致二战以来欧洲最大的冲突之一。
 
+早些时候普京召集安全委员会开会呼吁承认顿涅茨克人民共和国和卢甘斯克人民共和国的主权。他还在电视讲话中还指责美国和北约试图将乌克兰变成一个军事哨所来威胁俄罗斯。乌克兰方面表示俄罗斯支持的分裂份子发动的炮击已经达到近三年来的最高水平。分裂份子则声称乌克兰武装部队对平民区使用了重型武器。
 
-### 视频链接：
+对于普京这一行动白宫方面表示拜登已经下令实施新的制裁，内容包括禁止在普京承认的两个分裂地区进行新的投资，贸易和融资等。
 
-[https://gettr.com/post/pvxtj8684e](https://gettr.com/post/pvxtj8684e)
+另有报道称美方已经在和乌克兰政府讨论一旦俄罗斯入侵乌克兰，就让乌克兰总统泽连斯基离开首都基辅。
 
-### 音频链接：
+莫斯科方面已经在乌克兰边境集结了多大19万军队，美国等警告称入侵将在几天内发生。但普京在当天会议中表示莫斯科的首要任务是确保与北约达成安全保障协议以维持和平。
 
-
-
-
-
-编辑发布：闪电训练
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
