--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,20 +1,23 @@
 ---
-title: 港闻｜疫苗通行证周四起实施 食卫局不排除日后进一步收紧规定
+title: 日本民众已觉醒，抵触接种中共疫苗第三针
 ---
-`關注組` [轉載自GNews](https://gnews.org/zh-hans/2046587/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046854/)
 
-**撰文/ 港台前線｜發佈日期****/ 22/02/2022**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/疫苗通行證週四起實施-食衛局不排除日後進一步收緊規定.jpg)
-**更多资讯请关注官方盖特｜please follow our Gettr （**[**https://gettr.com/post/pl6w8he0b9**](https://gettr.com/post/pl6w8he0b9)**)**
+撰稿：东京樱花团/风翼
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2034.png)图片来源于网络
+据经济新闻报道：根据帝国数据库的“关于公司对第三类疫苗的态度的调查问卷”得出结论。
 
-港府宣布“疫苗通行证”自本周四起实施，范围涵盖食肆、街市、超市及商场等公共场所，要求所有12岁以上市民进入公共场所前须主动出示疫苗接种卡，同时亦需随身携带疫苗接种卡，以配合执法人员抽查。
+中共病毒（新冠病毒COVID-19）疫苗的第三剂加强剂接种速度和第二次接种速度相比，有相当大的推迟，其原因是对疫苗效果的怀疑和政府所做的反应怀有极大的不信任感。
 
-食物及衞生局副秘书长(衞生)蔡杰铭今晨在商台节目中表示，要取得“疫苗通行证”并非难事，仅需接种至少一针疫苗即可，蔡杰铭强调，现时进入商场买外卖、途经商场归家仍属豁免范围，但为了避免有市民“钻空子”，不排除日后进一步收紧相光规定。
+特别是企业在第二次接种前都积极参与了工作场所的疫苗接种相比，对于这次强化接种，企业对直接向员工推荐工作场所的疫苗接种持谨慎态度，只有20%的企业实施或考虑在工作场所接种疫苗。其原因表示，企业虽花费大量资金精力，但在预防感染上效果甚微，并伴有许多不良反应症状，政府方面对于事故和后遗症的方面也没有采取积极对应。
 
-值得关注的是，医管局在配合宣布“疫苗通行证”的记者会上，被问到，“近期不幸离世的死者中，有多少人打过疫苗？”时，医管局行政经理刘家献一时语塞，显得不知所措，迟疑一阵后，竟然以“人都死了，再研究是否打过针已经没有意义”作答，最后，他再次重申，呼吁未接种者尽快接种新冠疫苗。
+中小型公司表示，考虑因接种产生的不良反应政府所采取的消极对应态度（即使出现副作用或后遗症，政府也将接种疫苗视为个人责任）和一定数量的员工不愿意接种疫苗的情况下，将不再进行工作场所接种。从对疫苗本身的效能、不良反应、后遗症和政府的消极反应来看，不得不说民众越来越不信任政府并抵触接种中共病毒疫苗。
 
-来源｜[疫情記者會](https://www.youtube.com/watch?v=InsYcqFl1Zg)
+信息来源：[3回目ワクチン、「副反応・後遺症の責任取れない」、職域接種2割のみ。各自で判断を推奨](https://gunosy.com/articles/eNl1L?s=s)
 
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
