--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,23 +1,28 @@
 ---
-title: 日本民众已觉醒，抵触接种中共疫苗第三针
+title: 男子第三针后突感不适，最后死于心脏骤停
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046854/)
+`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/2047003/)
 
-撰稿：东京樱花团/风翼
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2034.png)图片来源于网络
-据经济新闻报道：根据帝国数据库的“关于公司对第三类疫苗的态度的调查问卷”得出结论。
+#### 翻译                  意大利达芬奇农场                 小白鸽
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Schermata-2022-02-22-alle-09.24.07.png)图片来源：eventiavversinews.it
+意大利巴里一名55岁男子在急诊室死亡后， 检察官已开始对其死亡展开过失杀人罪调查。
 
-中共病毒（新冠病毒COVID-19）疫苗的第三剂加强剂接种速度和第二次接种速度相比，有相当大的推迟，其原因是对疫苗效果的怀疑和政府所做的反应怀有极大的不信任感。
+2月15日这位男子因为心脏跳动加快由118救护车送到医院的急救中心。自打了第三针以后，他感到腿部有问题。15年前，他曾接受过肝移植，所以他担心疫苗会给他的身体健康带来问题。
 
-特别是企业在第二次接种前都积极参与了工作场所的疫苗接种相比，对于这次强化接种，企业对直接向员工推荐工作场所的疫苗接种持谨慎态度，只有20%的企业实施或考虑在工作场所接种疫苗。其原因表示，企业虽花费大量资金精力，但在预防感染上效果甚微，并伴有许多不良反应症状，政府方面对于事故和后遗症的方面也没有采取积极对应。
+他的家人指控时说：“ 疼痛使他起不了床。我们叫了救护车，做了心电图以后，他被送到了急救中心。他是10点被送到的， 下午四点才给他验血。那时， 他想去卫生间，但没人陪他去。”
 
-中小型公司表示，考虑因接种产生的不良反应政府所采取的消极对应态度（即使出现副作用或后遗症，政府也将接种疫苗视为个人责任）和一定数量的员工不愿意接种疫苗的情况下，将不再进行工作场所接种。从对疫苗本身的效能、不良反应、后遗症和政府的消极反应来看，不得不说民众越来越不信任政府并抵触接种中共病毒疫苗。
+这位55岁男子随后给妻子打电话，妻子接到丈夫的电话后马上赶到医院，但是这时丈夫却不接电话。
 
-信息来源：[3回目ワクチン、「副反応・後遺症の責任取れない」、職域接種2割のみ。各自で判断を推奨](https://gunosy.com/articles/eNl1L?s=s)
+“这位男子的儿子也来到急救中心， 一位患者告诉他医生正在抢救其父亲”，这一事实后被一护士所证实。据了解，他是一个人去的卫生间，由于某种还待核实的原因，导致心脏骤停，随后死亡。
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+出于愤怒，这位55岁的儿子一拳打在门上， 导致医务人员打电话叫来宪兵。受害者的家人决定提出申诉，并要求进行尸检。
+
+值班检察官卡埃塔诺•迪•巴利(Gaetano Di Bari) 将在2月21日将此案授权给法医布林迪西•利亚娜•尹纳莫拉多(Brindisi Liliana Innamorato)。
+
+原文链接：[https://www.eventiavversinews.it/bari-ha-un-malore-dopo-la-terza-dose-e-viene-lasciato-sei-ore-in-attesa-in-ambulanza-muore-per-arresto-cardiaco-nel-bagno-del-policlinico/](https://www.eventiavversinews.it/bari-ha-un-malore-dopo-la-terza-dose-e-viene-lasciato-sei-ore-in-attesa-in-ambulanza-muore-per-arresto-cardiaco-nel-bagno-del-policlinico/)
+
+编辑、上传： Xiao  baige
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
