--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,27 +1,16 @@
 ---
-title: 爆二代视角-堪培拉的儿童接种情况
+title: 20220220文贵大直播：普京和习之间一定有惊天的秘密 步调始终一致
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2046851/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2047002/)
 
-撰稿：喜爱迪
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide1-22.jpg)
-来自网络截图
-我看了今天的新闻，发现堪培拉 5-11 岁儿童接种一剂疫苗的接种率已达到 76.8%。我可以想象我的朋友们卷起袖子打了针后去上学，认为他们对病毒有很好的保护和免疫力。这让我感到难受。
+作者：东京樱花团视频小组
 
-上学的孩子们只需要接种疫苗，不管他们喜欢与否——在这种情况下，我的大多数朋友肯定会选择这个选项。想想他们在注射后可能会产生什么样的副作用，就像我的一位老师在注射第二剂后的副作用一样令人担忧。他甚至没有去上网课，因为他感觉很不舒服。
+校对：东京樱花团视频小组
 
-我只是希望他们能没事，但想想大家都戴着口罩打了疫苗，做好了预防措施去上学，一定很累。口罩甚至不能有效防止病毒传播，而且在学校里很难始终保持社交距离，因为学生和老师要在同一个房间里呆大约一小时。在我看来，所采取的预防措施确实毫无用处。
+编辑发布：东京樱花团视频小组
 
-可悲的是，大多数接种疫苗的人真的认为他们对病毒有保护和免疫力。如果他们真的知道他们所做的就像一场噩梦一样，那么他们会对政府以及那些知道真实影响但仍然强制执行的政客感到愤怒。
-
-如果每个人都知道真相，那将挽救无数生命。但这就是政府试图远离人民的东西：真相。还有12 岁及以上的人接种 2 剂 达到98.6% 的疫苗接种率，竟然这么多人打过两剂！
-
-希望他们没有打加强针，虽然要求打了加强针才能参加一些短途旅行或会议，我很高兴我在家上学。我仍然无法相信这种毒针正用在儿童和蹒跚学步的孩子身上。这些做了坏事的人怎么可能安心睡觉？
-
-总的来说，我只希望接种过疫苗的人-包括我的朋友们能够身体健康，并希望全世界所有人：请不要接种疫苗！
-
-编辑：云彩
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
