--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,36 +1,16 @@
 ---
-title: 欺骗性的新闻报道和丑闻缠身的CNN创下最差收视率
+title: 20220220文贵大直播：新中国联邦反洗脑首先以教育入手
 ---
-`topnews` [轉載自GNews](https://gnews.org/zh-hans/2046783/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2046988/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture2-5.png)
+作者：东京樱花团视频小组
 
-图片来自网络
+校对：东京樱花团视频小组
 
-据报道，曾被称为 “最值得信赖的新闻台 “的CNN上周的收视率骤降至七年来的历史新低。
+编辑发布：东京樱花团视频小组
 
-在过去一年中，CNN不断的欺骗性新闻报道和一连串高调的丑闻中，这个左翼新闻网络平台失去了90%的观众。
-
-从2月7日至13日，它 “平均只有44.4万名观众”，是2015年11月福克斯新闻以来的最低收视率。即使在CNN的黄金时段播出，它的平均收视率也只有49.1万。
-
-2月14日星期一，CNN网络开始运行一个付费广告。内容来自中国共产党的国营媒体组织–中国西部传媒。CNN的广告名为 “无与伦比的冬奥盛会”，强调了奥运赛事和中国共产党使环境 “更绿色 “所做的努力。
-
-同时，CNN完全忽视了冬奥会中大量人造滑雪道造成环境污染的事实。
-
-CNN也完全没有报道运动员在中共国检疫的违规行为–他们被强行 “拉去隔离 “的事实。
-
-12月，华纳媒体首席执行官杰森-基拉尔(Jason Kilar)发布了一份全公司范围的备忘录，警告戈尔斯特、扎克和库莫违反公司政策，包括CNN的新标准和行为守则。
-
-CNN暂停了其黄金时段明星克里斯-库莫（Chris Cuomo）的工作，因为这位主播被发现秘密帮助他陷入困境的弟弟、前纽约州长安德鲁-库莫辩护性骚扰指控，导致他辞职。炒掉他的决定是在CNN的律师收到一位女性代表的来信后做出的，她声称科莫在2011年邀请她到他的办公室吃午饭后对她进行了性侵犯，当时他们都在ABC新闻工作。
-
-本月早些时候，CNN老板杰夫-扎克（Jeff Zucker）在承认他没有披露与CNN执行副总裁兼首席营销官艾莉森-戈尔斯特（Allison Gollust）的自愿关系后辞职。戈尔斯特也于周四辞职。
-
-新闻来源链接： 
-[https://thecovidworld.com/canadian-government-resorts-to-financial-terrorism-against-peaceful-protesters-showing-why-we-can-never-trust-banks-or-fiat/](https://thecovidworld.com/canadian-government-resorts-to-financial-terrorism-against-peaceful-protesters-showing-why-we-can-never-trust-banks-or-fiat/)
-
-本文作者：Rebecca (一切心皆不可得！)
-上传排版：Hong
-
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
